公職人員選舉罷免法 2002.12.31

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -30,15 +30,17 @@
 
 * 10 各級選舉委員會在辦理選舉、罷免期間，得調用各級政府職員辦理事務。
 
-* 11 各級選舉委員會分別掌理左列事項：一、選舉、罷免公告事項。二、選舉、罷免事務進行程序及計畫事項。三、候選人資格之審定事項。四、選舉宣導之策劃事項。五、選舉、罷免之監察事項。六、投票所、開票所之設置及管理事項。七、選舉、罷免結果之審查事項。八、當選證書之製發事項。九、訂定政黨使用電視及其他大眾傳播工具從事競選宣傳活動之辦法。十、其他有關選舉、罷免事項。
+* 11 各級選舉委員會分別掌理左列事項：一、選舉、罷免公告事項。二、選舉、罷免事務進行程序及計畫事項。三、候選人資格之審定事項。四、選舉宣導之策劃事項。五、選舉、罷免之監察事項。六、投票所、開票所之設置及管理事項。七、選舉、罷免結果之審查事項。八、當選證書之製發事項。九、訂定政黨使用電視及其他大眾傳播工具從事競選宣傳活動之辦法。十、其他有關選舉、罷免事項。直轄市、縣（市）選舉委員會就左列各種公職人員選舉、罷免事務，指揮、監督鄉（鎮、市、區）公所辦理：一、選舉人名冊公告閱覽之辦理事項。二、投票所、開票所設置及管理之辦理事項。三、投票所、開票所工作人員遴報事項。四、選舉、罷免票之轉發事項。五、選舉公報及投票通知單之分發事項。六、選舉法令之宣導事項。七、其他有關選舉、罷免事務之辦理事項。
 
-> 釋：一、將現行法第九款改列第十款。二、第九款則明定政黨使用大眾傳播工具從事競選宣傳活動之法令依據。
+> 釋：增列第二項，將本法施行細則第五條規定提列規定，並酌作文字修正。
 
 * 12 中央選舉委員會置巡迴監察員若干人，由中央選舉委員會遴選具有選舉權之公正人士，報請行政院院長聘任，並指定一人為召集人；直轄市、縣（市）選舉委員會各設監察小組，置小組委員若干人，由直轄市選舉委員會及縣（市）選舉委員會，分別遴選具有選舉權之公正人士，報請中央選舉委員會及省選舉委員會聘任，並各指定一人為召集人，執行左列事項：一、候選人、助選員、罷免案提議人、被罷免人違反選舉、罷免法規之監察事項。二、選舉人、罷免案投票人違反選舉、罷免法規之監察事項。三、辦理選舉、罷免事務人員違法之監察事項。四、其他有關選舉、罷免監察事項。前項巡迴監察員、監察小組委員，均為無給職。其任期及人數於中央、直轄市、縣（市）選舉委員會組織規程規定之。直轄市、縣（市）選舉委員會，得遴聘具有選舉權之公正人士為政見發表會監察員，執行有關政見發表之監察事項。各級選舉委員會執行監察職務準則，由中央選舉委員會定之。
 
 > 釋：一、查現行選舉監察制度，中央、省選舉委員會各置巡迴監察員，直轄市、縣（市）選舉委員會則設監察小組，分別執行監察事項，惟經歷次增額中央民意代表選舉及地方公職人員選舉之經驗，對於監察事項之執行，實際均有賴監察小組，中央、省巡迴監察員多僅巡迴督導查察；為發揮「選監合一」精神，並強化直轄市、縣（市）選舉委員會監察小組之監察功能，爰將現行第十二條第一項所定監察制度作左列修正：（一）中央、省選舉委員會取消巡迴監察員之設置，其「選舉監察事項」由中央、省選舉委員會委員及設置之幕僚單位負責辦理選舉監察工作之策劃、指揮與督導事宜。（二）直轄市、縣（市）選舉委員會各設監察小組，為常設單位，置委員若干人，由直轄市、縣（市）選舉委員會分別遴報中央、省選舉委員會聘任之，並各指定一人為召集人；惟小組委員人數，於非選舉期間，將僅遴聘少數委員，負責監察工作之研討與改進，俾於選舉期間提高監察小組之監察功能。二、第二項係配合第一項酌作文字修正。三、第三項係就現行本法施行細則第五十一條規定文字修正增列，俾政見發表會監察員具有法律地位。四、增訂第四項授權中央選舉委員會訂定各級選舉委員會執行監察職務準則，俾利監察事項之執行。
 
-* 13 各級選舉委員會之預算，分別由中央、省（市）、縣（市）政府依法編列。
+* 13 各級選舉委員會之經費預算，其年度經常費，由中央政府統籌編列；其辦理選舉、罷免所需經費，中央公職人員選舉、罷免由中央政府編列，直轄市議員、直轄市長選舉、罷免由直轄市政府編列，縣（市）議員、縣（市）長選舉、罷免由縣（市）政府編列，鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長選舉、罷免由鄉（鎮、市）公所編列，直轄市、市之里長選舉、罷免由直轄市、市政府編列。
+
+> 釋：按地方制度法第二條、第十四條規定，直轄市、縣（市）、鄉（鎮、市）為地方自治團體，具公法人地位，依法辦理自治事項；財政收支劃分法第三十六條規定，各級政府行政區域內人民行使政權之費用，由各該政府負擔之，是依前開規定辦理直轄市、縣（市）公職人員選舉、罷免之實施事項，為各該地方政府之自治事項，其支出由各該級政府編列，爰將本法施行細則第六條規定酌予修正後，提升至本法規範。
 
 * 14 中華民國國民，年滿二十歲，無左列情事之一者，有選舉權。一、褫奪公權尚未復權者。二、受禁治產宣告尚未撤銷者。前項第一款情形，如係戒嚴時期依懲治叛亂條例判決者，不在此限。
 
@@ -64,19 +66,19 @@
 
 > 釋：配合職婦團體選舉之廢止，爰刪除本條。
 
-* 20 選舉人，除另有規定外，應於戶籍所在地投票所投票。投票所工作人員，得在戶籍地或工作地之投票所投票。
+* 20 選舉人，除另有規定外，應於戶籍所在地投票所投票。投票所工作人員，得在戶籍地或工作地之投票所投票。但在工作地之投票所投票者，以戶籍地及工作地在同一選舉區，並在同一直轄市、縣（市）為限。
 
-> 釋：配合憲法增修條文第十五條之規定，爰刪除第三項監察委員選舉之規定。
+> 釋：本法施行細則第十六條有關在工作地之投票所投票者，以其戶籍地及工作地在同一選舉區並在同一直轄市、縣（市）為限之規定，因涉人民之權益，爰納入第二項但書規定；另選舉票之印製，亦分別由各選舉區所在之直轄市、縣（市）選舉委員會印製，投開票所工作人員申請在工作地投票，如工作人員之戶籍不在工作地之直轄市、縣（市）境內，該工作地之選舉委員會既無工作人員行使選舉權之選舉票，選舉人名冊之編造亦有實務上之困難，故規定得在工作地投票所投票者，其戶籍地及工作地應在同一選舉區並在同一直轄市、縣（市），係考慮兼顧投開票所工作人員權益及選務實際需要而訂定。
 
-* 21 選舉人投票時，應憑本人國民身分證領取選舉票。
+* 21 選舉人投票時，應憑本人國民身分證領取選舉票。選舉人領取選舉票時，應在選舉人名冊上簽名或蓋章或按指印，按指印者，並應有管理員及監察員各一人蓋章證明。選舉人名冊上無其姓名或姓名不符者，不得領取選舉票。但姓名顯係筆誤、因婚姻關係而冠姓或回復本姓致與國民身分證不符者，經主任管理員會同主任監察員辨明後，應准領取選舉票。選舉人領得選舉票後應自行圈投。但因身心障礙無法自行圈投而能表示其意思者，得依其請求，由家屬一人在場，依據本人意思，眼同協助或代為圈投；其無家屬在場者，亦得依其請求，由投票所管理員及監察員各一人，依據本人意思，眼同協助或代為圈投。
 
-> 釋：配合憲法增修條文第十五條之規定，爰刪除第二項監察委員選舉之規定。
+> 釋：一、將本法施行細則第十七條第一項有關選舉人領取選舉票之規定納入本條，爰增列第二項。二、將本法施行細則第十九條納入本條規定，爰增列第三項，並配合身心障礙者保護法之規定，酌作文字修正。
 
 * 22 選舉人應於規定之投票時間內到投票所投票；逾時不得進入投票所。但已於規定時間內到達投票所尚未投票者，仍可投票。
 
-* 23 選舉人名冊，由鄉（鎮、市、區）戶籍機關依據戶籍登記簿編造；凡投票前二十日已登錄戶籍登記簿，依規定有選舉人資格者，應一律編入名冊；投票日前二十日以後遷出之選舉人，仍應在原選舉區行使選舉權。
+* 23 選舉人名冊，應載明編號、姓名、性別、出生年月日及戶籍地址，由鄉（鎮、市、區）戶籍機關依據戶籍登記簿編造；凡投票日前二十日已登錄戶籍登記簿，依規定有選舉人資格者，應一律編入名冊；投票日前二十日以後遷出之選舉人，仍應在原選舉區行使選舉權。選舉人名冊編造後，除選舉委員會、鄉（鎮、市、區）公所、戶政機關依本法規定使用外，不得以抄寫、複印、攝影或其他任何方式對外提供。
 
-> 釋：一、有選舉權者需符合第十五條規定具備選舉人資格者才予列入選舉人名冊，爰將「有選舉權者」修正為「有選舉人資格者」。二、配合第十五條修正，將「區域」「或除籍」等字刪除。
+> 釋：一、本法施行細則第二十一條選舉人名冊應記載之事項納入第一項規定。二、基於尊重各選舉人之隱私權，避免選舉人名冊被移作商業或其他用途，禁止提供名冊之函釋規定，因涉及人民權利義務，爰於第二項予以明訂，以提昇為法律位階。
 
 * 24 （刪除）
 
@@ -100,9 +102,9 @@
 
 * 30 選舉人名冊經公開陳列、公告閱讀期滿後，村、里長應即將原冊暨申請更正情形，報由鄉（鎮、市、區）公所轉送戶籍機關查核更正。選舉人名冊經公告更正後即為確定，並由各直轄市、縣（市）選舉委員會公告選舉人人數。
 
-* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區登記為公職人員候選人。但省（市）長候選人須年滿三十五歲；縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六。選舉人年滿二十三歲，得由依法設立之政黨登記為中央公職人員全國不分區選舉之候選人。僑居國外之中華民國國民年滿二十三歲，未曾設有戶籍或已將戶籍遷出國外連續八年以上者，得由依法設立之政黨登記為中央公職人員僑居國外國民選舉之候選人。政黨登記之全國不分區、僑居國外國民選舉候選人，應為該黨黨員，並經各該候選人書面同意；其候選人名單應以書面為之，並排列次序。回復中華民國國籍三年或因歸化取得中華民國國籍滿十年者，得依前四項規定登記為候選人。
+* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區登記為公職人員候選人。但省（市）長候選人須年滿三十五歲；縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六歲。選舉人年滿二十三歲，得由依法設立之政黨登記為中央公職人員全國不分區選舉之候選人。僑居國外之中華民國國民年滿二十三歲，未曾設有戶籍或已將戶籍遷出國外連續八年以上者，得由依法設立之政黨登記為中央公職人員僑居國外國民選舉之候選人。前項已將戶籍遷出國外連續八年以上之計算，自戶籍遷出登記日起算。政黨登記之全國不分區、僑居國外國民選舉候選人，應為該黨黨員，並經各該候選人書面同意；其候選人名單應以書面為之，並排列次序。回復中華民國國籍滿三年或因歸化取得中華民國國籍滿十年者，得依前四項規定登記為候選人。第三項所稱八年以上及前項所稱滿三年或滿十年之計算，均以算至投票日前一日為準。
 
-> 釋：一、配合戶籍法之修訂，爰將第一項「或其本籍地」等文字，及第二項、第九項有關本籍規定予以刪除。二、配合地方制度法制化，第一項增列省（市）長候選人法定年齡之規定。三、配合憲法增修條文第十五條之規定，爰將第三項暨第四項、第五項後段但書監察委員選舉之規定予以刪除。四、原條文第四項至第七項移列為第二項至第五項。五、原第五項移列為第三項，並將「僑居」之定義予以界定。六、原第七項移列為第五項，並將「第一項、第三項至第六項」等文字修正為「前四項」。七、原第八項配合原第五項之修正，予以刪除。
+> 釋：一、配合憲法增修條文，省議員及省長選舉業已停止辦理，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關省議員及省長選舉部分暫不修正。二、第四條第二項僅明定居住期間之起算，以戶籍遷入登記之日期為準，至居住期間終止之認定，則未有規定，其為涉及人民權利義務事項，為資明確，爰將現行有關登記須知之規定提昇法律位階，明列於第四項。三、增列第七項，將本法施行細則第二十八條之一規定，移列於本條明定之。
 
 * 32 （刪除）
 
@@ -114,13 +116,13 @@
 
 > 釋：照現行法第一款內「經判刑確定者」修正為「經依刑法判刑確定者」。
 
-* 35 左列人員不得申請登記為候選人：一、現役軍人或警察。二、現在學校肄業學生。三、辦理選舉事務人員。前項第一款之現役軍人，屬於後備軍人或國民兵應召者，在應召未入營前，或係教育、勤務及點閱召集，均不受限制。第一項第二款之現在學校肄業學生，屬於現職公職人員再行進修者，得申請登記為候選人。現任公務人員不得在其任所所在地，申請登記為國民大會代表候選人。
+* 35 左列人員不得申請登記為候選人：一、現役軍人、軍事及警察學校學生或警察。二、現在學校肄業學生。三、各級選舉委員會之委員、監察人員、職員、鄉（鎮、市、區）公所辦理選舉事務人員及投票所、開票所工作人員。前項第一款之現役軍人，屬於後備軍人或國民兵應召者，在應召未入營前，或係教育、勤務及點閱召集，均不受限制。第一項第二款之現在學校肄業學生，屬於現職公職人員再行進修者，得申請登記為候選人。現任公務人員不得在其任所所在地，申請登記為國民大會代表候選人。
 
-> 釋：為鼓勵現職公職人員之研究進修，以提高服務品質，爰增訂第三項，明定經辦理休學者，於再次競選時，得申請登記為候選人，不受第一項第二款之限制。
+> 釋：一、原條文第一項第一款增列「軍事及警察學校學生」等字。二、參照本法施行細則第三十三條規定，將原條文第一項第三款辦理選舉事務人員予以明確規定。
 
-* 35.1 依法設立之政黨，得推薦候選人參加公職人員選舉。經推薦之候選人，應檢附政黨推薦書向選舉委員會登記。
+* 35.1 依法設立之政黨，得推薦候選人參加公職人員選舉，經政黨推薦之候選人，應為該政黨黨員，並檢附加蓋中央主管機關發給該政黨圖記之政黨推薦書，於候選人申請登記期間內，向選舉委員會辦理登記。前項推薦書，應於申請登記候選人時繳送受理登記之選舉委員會，登記期間截止後補送者，不予受理。
 
-> 釋：明定政黨得推薦候選人參加公職人員選舉及登記之手續。
+> 釋：一、本法施行細則第三十五條之一第一項，有關本法第三十五條之一所定經政黨推薦之候選人，應為該政黨黨員之規定，涉及候選人參選資格，為使候選人之資格及權利義務明確起見，爰改列為第一項後段規定，並酌作文字修正。二、本法施行細則第三十五條之一第二項，有關政黨推薦書應於申請登記為候選人時繳送受理登記之機關，登記期間截止後補送者，不予受理之規定，涉及候選人之權益，爰改列為第二項規定。
 
 * 36 候選人名單公告後，經發現候選人在公告前或投票前有左列情事之一者，投票前由選舉委員會撤銷其候選人登記；當選後依第一百零三條之一規定提起當選無效之訴：一、候選人資格不合第三十一條規定或候選人檢覈合格資格被撤銷者。二、有第三十四條或第三十五條第一項、第四項之情事者。三、依第八十五條第一項規定不得登記為候選人者。
 
@@ -130,13 +132,21 @@
 
 > 釋：本條新增。
 
-* 37 經登記為候選人者，不得撤回其候選人登記。經政黨推薦之區域、山胞選舉候選人，政黨得於登記期間截止前，撤回其推薦。經政黨登記之全國不分區、僑居國外國民選舉候選人名單，政黨得於登記期間截止前撤回或更換。經登記為候選人者，於登記期間截止後，遷出其選舉區或除籍者，不影響其候選人資格，並仍在原選舉區行使選舉權。
+* 37 經登記為候選人者，不得撤回其候選人登記。經政黨推薦之區域、山胞選舉候選人，政黨得於登記期間截止前，備具加蓋中央主管機關發給該政黨圖記之政黨撤回推薦書，向原受理登記之選舉委員會撤回推薦，逾期不予受理。經政黨登記之全國不分區、僑居國外國民選舉候選人名單，政黨得於登記期間截止前，備具加蓋中央主管機關發給該政黨圖記之政黨撤回或更換登記申請書，向原受理登記之選舉委員會撤回或更換，逾期不予受理。其候選人名單之更換，包括人數變更、人員異動、順位調整，其有新增之候選人者，政黨應依規定繳交表件及保證金。經登記為候選人者，於登記期間截止後，遷出其選舉區或除籍者，不影響其候選人資格，並仍在原選舉區行使選舉權。
 
-> 釋：一、為端正選風，杜絕「搓圓仔湯」弊端，爰修正第一項使經登記為候選人者不得撤回其登記。二、明定第二項推薦之候選人為區域、山胞選舉之候選人，俾與第三項所定政黨於全國不分區、僑居國外國民選舉提出候選人名單上之候選人有所區別。三、政黨登記全國不分區及僑居國外國民選舉候選人名單後，如因故須撤回或更換候選人登記截止前撤回或更換，爰增列第三項。四、第三項之更換包括人數變更、人員異動、順序調整。五、配合職婦團體選舉之廢止，爰將原第三項「或喪失職業團體或婦女團體會員資格」及「或各該團體」部分刪除。
+> 釋：一、憲法增修條文業將「山胞」修正為「原住民」，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關「山胞」應修正為「原住民」部分，暫不修正。二、將本法施行細則第三十七條第一項，有關備具加蓋中央主管機關發給該政黨圖記之政黨撤回推薦書，向原受理登記之機關撤回推薦，逾期不予受理之規定，移列第二項後段明定之。三、本法施行細則第三十七條第二項，有關備具加蓋中央主管機關發給該政黨圖記之撤回或更換登記申請書，向原受理登記之機關撤回或更換，逾期不予受理之規定，移列第三項前段明定。本法施行細則第三十七條第三項另規定，候選人名單之更換，包括人數變更、人員異動、順序調整，其有新增之候選人者，政黨應依規定繳交表件及保證金。以本項涉及候選人參政權之行使，為明確起見，改列為第三項後段規定，並酌作文字修正。
 
 * 38 登記為候選人時應繳納保證金；其數額由選舉委員會先期公告。但村、里長候選人免予繳納。全國不分區、僑居國外國民選舉候選人之保證金，依公告數額，由登記之政黨按登記人數繳納。前二項保證金應於公告當選人名單後十日內發還。但有左列情事之一者，不予發還：一、全國不分區、僑居國外國民選舉候選人未當選者。二、其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者。
 
 > 釋：一、本條現行條文第四項第一款，業經行政院於八十二年十二月二十一日以台八十二內字第四五二六四號函請立法院審議之「公職人員選舉罷免法部分條文修正草案」，予以刪除。二、為配合司法院大法官議決釋字第三四０號解釋，爰刪除原第二項有關政黨推薦之候選人其保證金減半繳納之規定，以符憲法平等原則。三、第三項之「前三項」修正為「前二項」。
+
+* 38.1 登記為候選人時，應備具選舉委員會規定之表件及保證金，於規定時間內，向受理登記之選舉委員會辦理。表件不全、不符規定、保證金不足或未於規定時間內辦理者，應拒絕受理。
+
+> 釋：一、本條新增。二、申請登記之表件不全、不符規定或保證金不足者，拒絕受理其登記之申請，因事涉人民權益，爰將本法施行細則第三十一條第五項有關表件不全或不符規定者，受理登記之選舉委員會應拒絕受理其登記之申請之規定，移列於本條規定之；另申請登記期間內，其每日起、止時間依本法施行細則第四十一條規定，應由選舉委員會公告，其未於規定時間內辦理者，亦應拒絕受理，爰增列明定，以資明確。
+
+* 38.2 各種公職人員選舉候選人資格，應由主管選舉委員會審定。全國不分區、僑居國外國民選舉，政黨所提名單中之候選人，經審查有不符合規定者，應予以剔除，其名單所排列之順位由後依序遞補。立法委員區域、山胞及地方公職人員選舉，經審定之候選人名單，其姓名號次，由主辦選舉委員會，通知各候選人於候選人名單公告三日前公開抽籤決定之。但鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長候選人姓名號次之抽籤得指定鄉（鎮、市、區）公所辦理之。前項候選人姓名號次之抽籤，應由監察人員在場監察。候選人未親自到場參加抽籤或雖到場經唱名三次後仍不抽籤者，由辦理機關代為抽定。全國不分區、僑居國外國民選舉政黨候選人名單公告之順序號次，依內政部發給政黨證書之順位。
+
+> 釋：一、本條新增。二、憲法增修條文業將「山胞」修正為「原住民」，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關「山胞」應修正為「原住民」部分，暫不修正。三、候選人員資格審查及候選人姓名號次抽籤，關係候選人之參政權，爰將本法施行細則第三十八條第一項至第三項、第五項及第六項之規定提列於本條規定之，並酌作文字修正。
 
 * 39 公職人員選舉，其選舉區依左列規定：一、國民大會代表由直轄市及縣（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。二、立法委員由省（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。三、省議員由縣（市）選出者，以其行政區域為選舉區；直轄市議員選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。四、縣（市）議員、鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。五、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長選舉各依其行政區域為選舉區。
 
@@ -154,9 +164,9 @@
 
 > 釋：一、第三十九條第四款規定鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得在其行政區域內劃分選舉區。係屬縣選舉委員會辦理事項，本條第一項增列「第三十九條第四款及」等字，以資明確。二、將現行法第一項內「六個月」修正為「一年」。
 
-* 43 選舉委員會應依左列規定期間發布各種公告：一、選舉公告，須載明選舉種類、名額、選舉區之劃分、投票日期及投票起、止時間。並應於公職人員任期或規定之日期屆滿四十日前發布之。但重行選舉、重行投票或補選之公告日期不在此限。二、候選人登記，應於投票日二十日前公告，其登記期間不得少於五日。但鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉不得少於三日。三、選舉人名冊，應於投票日十五日前公告，其公告期間不得少於五日。四、候選人名單，應於競選活動開始前一日公告。五、選舉人人數，應於投票日三日前公告。六、當選人名單，應於投票日後七日內公告。前項第二款候選人登記期間截止後，如有選舉區無人登記時，得就無人登記之選舉區，公告辦理第二次候選人登記，其登記期間，不得少於二日。
+* 43 選舉委員會應依左列規定期間發布各種公告：一、選舉公告，須載明選舉種類、名額、選舉區之劃分、投票日期及投票起、止時間。並應於公職人員任期或規定之日期屆滿四十日前發布之。但重行選舉、重行投票或補選之公告日期不在此限。二、候選人登記，應於投票日二十日前公告，其登記期間不得少於五日。但鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉不得少於三日。三、選舉人名冊，應於投票日十五日前公告，其公告期間不得少於五日。四、候選人名單，應於競選活動開始前一日公告。五、選舉人人數，應於投票日三日前公告。六、當選人名單，應於投票日後七日內公告。前項第一款之名額，其依人口數計算者，以選舉投票之月前第六個月月終戶籍統計之人口數為準。第一項第二款候選人登記期間截止後，如有選舉區無人登記時，得就無人登記之選舉區，公告辦理第二次候選人登記，其登記期間，不得少於二日。
 
-> 釋：一、第一款將選舉公告發布日期由任期或規定之日期屆滿前「二個月至四個月間」發布，修正為「四十日前」以縮短選舉程序進行期間。另鑒於重行選舉、重行投票或補選皆係因法定原因而產生，其公告日期事實上無法限制，爰增訂但書規定，以求明確。二、第二款配合縮短選舉程序進行期間，將候選人登記之公告時間與期間酌予縮短。三、第三款未修正。四、第四款將候選人名單公告期間競選活動開始「前三日」修正為「前一日」，以縮短選舉程序進行期間。五、第五款、第六款未修正。六、為因應鄉（鎮、市）民代表、村、里長選舉之實際需要，參採地方自治法規中有關村、里長選舉無人登記時，得公告辦理第二次候選人登記之規定增列為第二項。
+> 釋：一、本法施行細則第四十條第二項提升至本法規定，爰增列第二項。二、原條文第二項移列為第三項，並酌作文字修正。
 
 * 44 公職人員選舉，應於各該公職人員任期或規定之日期屆滿十日前完成選舉投票。但重行選舉、重行投票或補選之投票完成日期不在此限。
 
@@ -166,9 +176,9 @@
 
 > 釋：一、配合憲法增修條文第十五條規定，刪除原第一項第一款監察委員選舉之規定。二、配合地方制度法制化，增列省（市）長競選活動期間之規定。並配合實際活動需要，將省長部分於第一款增列規定，原第一款增列「直轄市長」並改列第二款，原第二款改列第三款。三、其餘未修正。
 
-* 45.1 各種公職人員競選經費最高限額，應由選舉委員會依規定計算，於發布選舉公告之日同時公告之。前項競選經費最高限額依左列規定計算之：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉為以各該選舉區之應選名額除選舉區人口總數百分之七十，乘以基本金額新臺幣十五元所得數額，加上一固定金額之和。二、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長選舉為以各該選舉區人口總數百分之七十，乘以基本金額新臺幣八元所得數額，加上一固定金額之和。前項所定固定金額分別定為省（市）長新臺幣一千萬元，國民大會代表、立法委員、縣（市）長各新臺幣六百萬元，省（市）議員新臺幣四百萬元，縣（市）議員、鄉（鎮、市）長各新臺幣二百萬元，鄉（鎮、市）民代表新臺幣五十萬元，村、里長新臺幣八萬元。競選經費最高限額計算有未滿新臺幣一千元之尾數時，其尾數以新臺幣一千元計算之。
+* 45.1 各種公職人員競選經費最高限額，應由選舉委員會依規定計算，於發布選舉公告之日同時公告之。前項競選經費最高限額依左列規定計算之：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉為以各該選舉區之應選名額除選舉區人口總數百分之七十，乘以基本金額新臺幣十五元所得數額，加上一固定金額之和。二、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長選舉為以各該選舉區人口總數百分之七十，乘以基本金額新臺幣八元所得數額，加上一固定金額之和。前項所定固定金額分別定為省（市）長新臺幣一千萬元，國民大會代表、立法委員、縣（市）長各新臺幣六百萬元，省（市）議員新臺幣四百萬元、縣（市）議員、鄉（鎮、市）長各新臺幣二百萬元、鄉（鎮、市）民代表新臺幣五十萬元，村、里長新臺幣八萬元。競選經費最高限額計算有未滿新臺幣一千元之尾數時，其尾數以新臺幣一千元計算之。第二項所稱選舉區人口總數，係指投票之月前第六個月月終該選舉區戶籍統計之人口總數。
 
-> 釋：一、將計算方式及基本數據，予以明文規定，使計算原則明確化。二、按選舉種類、選舉區大小等因素規定一固定金額，另依人口數、應選名額增減計算一定金額，合計為總額，可顧及各項因素所需。
+> 釋：一、配合憲法增修條文，省議員及省長選舉業已停止辦理，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關省議員及省長選舉部分暫不修正。二、競選經費之計算須以選舉區人口總數為基準，為明確起見，爰將本法施行細則第四十二條之一第二項規定移列為第五項。
 
 * 45.2 政黨及候選人不得接受左列競選經費之捐助：一、外國團體、法人、個人或主要成員為外國人之團體、法人。二、同一種選舉其他政黨或候選人。三、公營事業或接受政府捐助之財團法人。
 
@@ -182,29 +192,29 @@
 
 > 釋：規定自選舉公告之日起，至投票日後三十日內，候選人競選經費方得申報列舉扣除，第一項爰增訂競選經費支付之起迄期間，俾資候選人有所遵循，並避免徵納雙方爭議，爰修正第一項。
 
-* 45.5 候選人除全國不分區、僑居國外國民選舉外，當選人在一人，得票數達各該選舉區當選票數三分之一以上者，當選人在二人以上，得票數達各該選舉區當選票數二分之一以上者，應補貼其競選費用，每票補貼新臺幣三十元。但其最高額，不得超過各該選舉區候選人競選經費最高限制。第一項當選票數，當選者在二人以上者，以最低當選票數為準；其最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。國家應每年對政黨撥給競選費用補助金，其撥款標準以最近一次立法委員選舉為依據。政黨之立法委員全國不分區、僑居國外國民選舉得票率達百分之五以上者，應補貼該政黨競選費用，每年每票補貼新臺幣五十元，至該屆立法委員任期屆滿為止。第一項、第三項所需補貼費用，依第十三條規定編列預算。
+* 45.5 候選人除全國不分區、僑居國外國民選舉外，當選人在一人，得票數達各該選舉區當選票數三分之一以上者，當選人在二人以上，得票數達各該選舉區當選票數二分之一以上者，應補貼其競選費用，每票補貼新臺幣三十元。但其最高額，不得超過各該選舉區候選人競選經費最高限額。第一項當選票數，當選人在二人以上者，以最低當選票數為準；其最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。第一項對候選人競選費用之補貼，應於當選人名單公告之次日起二十日內，由選舉委員會核算補貼金額，並通知候選人於三個月內掣據，向選舉委員會領取。國家應每年對政黨撥給競選費用補助金，其撥款標準以最近一次立法委員選舉為依據。政黨之立法委員全國不分區、僑居國外國民選舉得票率達百分之五以上者，應補貼該政黨競選費用，每年每票補貼新臺幣五十元，按會計年度由中央選舉委員會核算補貼金額，並通知政黨於一個月內掣據，向中央選舉委員會領取，至該屆立法委員任期屆滿為止。候選人及政黨未於規定期限內領取競選費用補貼者，選舉委員會應催告其於三個月內具領，逾期未領依法提存。但書面聲明放棄領取者，不在此限。第一項、第四項所需補貼費用，依第十三條規定編列預算。
 
-> 釋：現行「公職人員選舉罷免法」第四十五條之五，其中雖對競選經費之補助已有所規定，但隨著民主選舉之基礎的不斷擴大，政黨所需之政治資金也日益龐大。一般來說，政黨倚賴私人或公司團體的政治捐獻，若沒有完整之法律制度加以明確規範，所謂金權政治之現象就很容易滋生。因此公費補助政黨制度對民主政黨政治的確立，其意義是極為正面的，爰加以修正之。
+> 釋：一、候選人競選經費補貼係候選人之法定權益，惟為使預算之執行徹底落實，爰將本法施行細則第四十二條之六第一項，提列為第三項。二、原條文第三項移列為第四項，有關政黨競選費用補貼之規定，為使撥款標準明確，爰將本法施行細則四十二條之六第二項所定撥款方式納入本項規定。三、國家對候選人及政黨競選經費之補貼，係候選人及政黨法定之權益，為使預算之執行徹底確實及釐清選舉機關與受補貼之候選人及政黨之權利義務明確起見，爰將本法施行細則第四十二條之六第三項規定，移列為第五項。四、現行條文第四項移列為第六項，並酌作文字修正。
 
 * 46 候選人於競選活動期間，得在其選舉區設立競選辦事處及置助選員。候選人競選辦事處及助選員設置辦法，由中央選舉委員會定之。
 
 > 釋：配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。
 
-* 47 左列人員不得擔任助選員：一、已登記之候選人。但全國不分區、僑居國外國民選舉之候選人不在此限。二、公務人員。三、有第三十四條、第三十五條第一項各款情事之一者。
+* 47 左列人員不得擔任助選員：一、已登記之候選人。但全國不分區、僑居國外國民選舉之候選人不在此限。二、公務人員。三、有第三十四條、第三十五條第一項各款情事之一者。前項第二款所稱公務人員，為公務員服務法第二十四條規定之公務員。
 
-> 釋：一、全國不分區、僑居國外國民選舉之候選人，並未直接參選，與一般候選人性質不同，爰於第一項第一款增訂但書，排除不得擔任助選員之規定。二、刪除第二項規定，允許一人得擔任二以上候選人之助選員。
+> 釋：增列第二項，將本法施行細則第三十四條第一項公務人員之定義，納入本條規定。
 
 * 48 （刪除）
 
 > 釋：本條刪除。與現行第四十六條合併。
 
-* 49 公職人員選舉除全國不分區、僑居國外國民選舉外，選舉委員會應於競選活動期間內舉辦公辦政見發表會，候選人應親自到場發表政見，但經選舉區內候選人全體同意不辦理者，應予免辦；鄉（鎮、市）民代表及村、里長選舉，得視實際情形辦理或免辦。直轄市、縣（市）選舉委員會對於轄區內適宜供候選人競選活動之場所地點，於商洽管理機關、管理人或所有權人同意租借後，預先公告。
+* 49 公職人員選舉除全國不分區、僑居國外國民選舉外，選舉委員會應於競選活動期間內舉辦公辦政見發表會，候選人應親自到場發表政見。但經選舉區內候選人全體同意不辦理者，應予免辦；鄉（鎮、市）民代表及村、里長選舉，得視實際情形辦理或免辦。前項公辦政見發表會中候選人發表政見時間，每場每人以不少於十五分鐘為原則；其舉辦之場數、時間、程序等事項之實施辦法，由中央選舉委員會定之。直轄市、縣（市）選舉委員會對於轄區內適宜供候選人競選活動之場所地點，於商洽管理機關、管理人或所有權人同意租借後，預先公告。
 
-> 釋：一、配合憲法增修條文第十五條規定，刪除監察委員選舉之規定。二、依集會遊行法規定，人民申請集會沒有場次與時間之限制，室內集會規定從寬，為避免限制人民集會之疑義，爰刪除自辦政見發表會之規定，回歸一般法律（集會遊行法）規範，避免法律重疊適用之困擾。三、增列選舉區內全體候選人同意不辦理時，公辦政見發表會免辦。
+> 釋：一、公辦政見發表會發表政見之時間，攸關候選人之權益及其得否充分發表政見，爰將本法施行細則第四十七條第一項有關預定候選人發表政見時間之規定，移列為第二項，並明定公辦政見發表會舉辦之場數、時間、程序授權中央選舉委員會於實施辦法中定之。二、原條文第二項移列為第三項。
 
-* 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、出生地、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報。前項候選人之政見、號次、相片、本籍之編印，於全國不分區、僑居國外國民選舉候選人不適用之。第一項、第二項候選人及政黨之資料應於申請登記時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改，逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。候選人個人及政黨資料，由候選人及政黨自行負責。其個人及政黨資料為選舉委員會職務上所已知或經查明不實者，不予刊登公報。經所屬政黨推薦之候選人刊登其政黨推薦；未經所屬政黨推薦或經政黨推薦後撤回之候選人，不刊登其黨籍。選舉公報應於投票日二日前送達選舉區內各戶，並分別張貼適當地點。但全國不分區、僑居國外國民選舉，其選舉公報得由中央選舉委員會以報紙刊登方式為之。選舉委員會得視實際需要，選定公職人員選舉種類，透過電視或其他大眾傳播工具，辦理選舉及政黨選舉活動；其辦法，由中央選舉委員會定之。
+* 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、出生地、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報。前項候選人之政見、號次、相片、本籍之編印，於全國不分區、僑居國外國民選舉候選人不適用之。第一項所定各候選人政見內容以六百字為限，學、經歷以一百五十字為限。但全國不分區、僑居國外國民選舉候選人學、經歷以七十五字為限。第一項、第二項候選人及政黨之資料應於申請登記時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改，逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。候選人個人及政黨資料，由候選人及政黨自行負責。其個人及政黨資料為選舉委員會職務上所已知或經查明不實者，不予刊登公報。經所屬政黨推薦之候選人刊登其政黨推薦；未經所屬政黨推薦或經政黨推薦後撤回之候選人，不刊登其黨籍。選舉公報應於投票日二日前送達選舉區內各戶，並分別張貼適當地點。但全國不分區、僑居國外國民選舉，其選舉公報得由中央選舉委員會以報紙刊登方式為之。選舉委員會得視實際需要，選定公職人員選舉種類，透過電視或其他大眾傳播工具，辦理選舉及政黨選舉活動；其辦法，由中央選舉委員會定之。
 
-> 釋：原第三項、第五項合併，並將文字酌作修正。
+> 釋：一、為使選舉公報所定之候選人政見及個人資料等內容之字數，有公平明確之標準，爰將本法施行細則第五十二條第一項及第二項，提列為第三項，並酌作文字修正。二、其後項次順移。
 
 * 50.1 關於中央公職人員全國不分區及省長、直轄市長選舉，各主管選舉委員會應以公費，在全國性無線電視頻道，為候選人及其政黨舉辦二次以上電視政見發表會，每次時間不得少於一小時，受指定之電視台不得拒絕。廣播電視台、無線電視或有線電視台就候選人及其所屬政黨之相關新聞，應為公正、公平之處理。除依第一項規定外，政黨、候選人或第三人不得自行於廣播、電視播送廣告，從事競選活動或為候選人宣傳。
 
@@ -248,23 +258,29 @@
 
 > 釋：全國不分區、僑居國外國民選舉係政黨比例代表制，而政黨登記之候選人並未直接參與競選活動，其活動係由政黨為之，爰明定不得接受競選經費，亦不得從事第五十一條之一規定以外之競選活動。
 
-* 57 公職人員選舉，應視選舉區廣狹及選舉人分布情形，就機關、學校、公共場所或其他適當處所，分設投票所。投票所於投票完畢後，即改為開票所，當眾唱名開票。開票完畢，開票所主任管理員與主任監察員即以書面宣布開票結果，除於開票所門口張貼外，應將同一內容之投開票報告表副本當場簽名交付推薦候選人之政黨及未受政黨推薦之候選人所指派之人員。各開票所書面開票結果報告如與投開票報告表不同時，應以投開票報告表內容為準。
+* 57 公職人員選舉，應視選舉區廣狹及選舉人分布情形，就機關、學校、公共場所或其他適當處所，分設投票所。山胞公職人員選舉，選舉委員會得斟酌實際情形，單獨設置投票所或於區域選舉投票所內辦理投票。投票所除選舉人及第二十一條規定之家屬外，未佩帶各級選舉委員會製發標誌之人員不得進入。但檢察官依法執行職務者，不在此限。投票所於投票完畢後，即改為開票所，當眾唱名開票。開票完畢，開票所主任管理員與主任監察員即以書面宣布開票結果，除於開票所門口張貼，應將同一內容之投開票報告表副本當場簽名交付推薦候選人之政黨及未受政黨推薦之候選人所指派之人員，其領取以一份為限。各開票所書面開票結果報告如與投開票報告表不同時，應以投開票報告表內容為準。投開票完畢後，投開票所主任管理員應會同主任監察員，將選舉票按用餘票、有效票、無效票及選舉人名冊分別包封、簽名或蓋章，一併送交鄉（鎮、市、區）公所轉送直轄市、縣（市）選舉委員會保管，除檢察官或法院依法行使職權外，不得開拆。前項選舉票及選舉人名冊，自開票完畢後，其保管期間之規定如下：一、用餘票為一個月。二、有效票及無效票為六個月。三、選舉人名冊為六個月。前項保管期間，發生訴訟時，其與訴訟有關部分，應延長保管至訴訟程序終結。
 
-> 釋：一、配合憲法增修條文第十五條規定，刪除第二項監察委員選舉之規定。二、原第三項改列第二項，並作文字修正。三、增列第三項。
+> 釋：一、增列第二項，將本法施行細則第五十六條第二項，移列於本項規定之，並酌作文字修正。二、增列第三項，將本法施行細則第五十八條移列於本項規定之，並酌作文字修正。三、原條文第二項移列為第四項，並將本法施行細則第五十六條第四項後段「每一推薦候選人之政黨及未受政黨推薦之候選人以領取一份為限。」規定，移列於本項規定，並酌作文字修正。四、原條文第三項，移列為第五項。五、增列第六項，將本法施行細則第六十條、第六十二條相關規定，移列本項規定之，並酌作文字修正。六、增列第七項，將本法施行細則第六十四條第一項，移列本項規定之，並酌作文字修正。七、增列第八項，將本法施行細則第六十四條第二項，移列本項規定之，並酌作文字修正。
 
-* 58 投票所、開票所置主任管理員一人，管理員若干人，由選舉委員會派充，辦理投票、開票工作。
+* 58 投票所、開票所置主任管理員一人，管理員若干人，由選舉委員會派充，辦理投票、開票工作。前項主任管理員、管理員，得洽請各級政府機關及公立學校推薦後遴派之，受遴派之政府機關職員及學校教職員，不得拒絕。投票所、開票所置警衛人員，由直轄市、縣（市）選舉委員會洽請當地警察機關調派之。
+
+> 釋：一、增列第二項，將本法施行細則第六十五條第一項後段「得洽請各級政府機關及公立學校推薦後遴派之，受遴派之政府機關職員及學校教職員不得拒絕。」之規定，移列於本項規定之。二、增列第三項，將本法施行細則第六十五條第二項移列於本項規定之。
 
 * 59 投票所、開票所置主任監察員一人，監察員若干人，監察投票、開票工作。前項監察員由候選人就所需人數平均推薦，送由選舉委員會審核派充之。但經政黨推薦之候選人，其監察員之推薦，由所屬政黨為之。候選人或政黨得就其所推薦之監察員指定投票所、開票所，執行投票、開票監察工作，如指定之監察員超過該投票所、開票所規定名額時，以抽籤定之。但投、開票所監察員不得全屬同一政黨。主任監察員及推薦不足額之監察員，由選舉委員會就左列人員遴派之：一、地方公正人士。二、各機關、團體、學校人員。三、大、專院、校成年學生。監察員推薦及服務規則，由中央選舉委員會定之。
 
 > 釋：第二項配合政黨參與選舉推薦投、開票所監察員之規定，予以修正。
 
-* 60 選舉票應由選舉委員會按選舉區印製分發應用。選舉票上應刊印各候選人之號次、姓名及相片。但中央公職人員選舉，經政黨推薦之候選人應同時刊印其黨籍。前項選舉票，應於投票日前一日交各該投票所主任管理員會同主任監察員當眾點清。
+* 59.1 投票所、開票所之工作人員，應參加選舉委員會舉辦之講習。
 
-> 釋：全國不分區、僑居國外國民選舉係採政黨比例方式，為配合國情及國人之投票習慣且簡易可行，乃採一張票方式選出，並以政黨推薦之候選人為計算標準，爰修正第一項，增列但書規定中央公職人員選舉，經政黨推薦之候選人應同時刊印其黨籍。
+> 釋：一、本條新增。二、將本法施行細則第七十條前段規定移列本條規定之。
 
-* 61 選舉之投票，由選舉人於選舉票圈選欄上，以選舉委員會製備之圈選工具圈選一人。選舉人圈選後不得將圈選內容出示他人。
+* 60 選舉票應由選舉委員會按選舉區印製分發應用。選舉票上應刊印各候選人之號次、姓名及相片。但中央公職人員選舉，經政黨推薦之候選人應同時刊印其黨籍。前項選舉票，由直轄市、縣（市）選舉委員會依中央選舉委員會規定之式樣印製，並由監察小組委員到場監印，於投票日前一日交各該投票所主任管理員會同主任監察員當眾點清。
 
-> 釋：配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。
+> 釋：將本法施行細則第七十二條有關選舉票印製規定移列第二項規定之。
+
+* 61 選舉之投票，由選舉人於選舉票圈選欄上，以選舉委員會製備之圈選工具圈選一人。選舉人圈選後，不得將圈選內容出示他人。第一項圈選工具，由直轄市、縣（市）選舉委員會依中央選舉委員會規定之式樣製備。
+
+> 釋：一、增列第三項，將本法施行細則第七十四條規定「圈選工具，其式樣由中央選舉委員會規定，由直轄市、縣（市）選舉委員會製備。」移列規定之，並酌作文字修正。二、其餘未修正。
 
 * 62 選舉票有左列情事之一者無效：一、不用選舉委員會製發之選舉票者。二、圈二人以上者。三、所圈地位不能辨別為何人者。四、圈後加以塗改者。五、簽名、蓋章、按指印、加入任何文字或劃寫符號者。六、將選舉票撕破致不完整者。七、將選舉票污染致不能辨別所圈選為何人者。八、不加圈完全空白者。九、不用選舉委員會製備之圈選工具者。前項無效票，應由開票所主任管理員會同主任監察員認定；認定有爭議時，由全體監察員表決之。表決結果正反意見同數者，該選舉票應為有效。
 
@@ -276,17 +292,21 @@
 
 > 釋：配合地方制度法制化，增列省（市）長選舉之規定。
 
-* 65 公職人員選舉，除另有規定外，按各選舉區應選出之名額，以候選人得票比較多數者為當選；票數相同時，以抽籤決定之。公職人員選舉，有婦女當選名額，其當選人少於應行當選名額時，應將婦女候選人所得選舉票單獨計算，以得票比較多數者為當選。全國不分區、僑居國外國民選舉當選名額之分配，依左列規定：一、以國民大會代表、立法委員區域及山胞選舉，各政黨所推薦候選人得票數之和，為各政黨之得票數。以各政黨得票數相加之和，除各該政黨得票數，求得各該政黨國民大會代表、立法委員得票比率。二、以應選名額乘前款得票比率所得積數之整數，即為各政黨分配之當選名額；按政黨名單順位依次當選。三、依前款規定分配當選名額，如有剩餘名額，應按各政黨分配當選名額後之剩餘數大小，依次分配剩餘名額。剩餘數相同時，以抽籤決定之。四、各政黨分配之婦女當選名額少於應行當選名額時，優先分配當選。五、政黨登記之候選人名單人數少於應分配之當選名額時，或婦女候選人數少於應分配之婦女當選名額時，均視同缺額。六、各該政黨之得票比率未達百分之五以上者，不予分配黨選名額。其得票數不列入第一款計算。七、無黨籍及未經政黨推薦之候選人之得票數，不列入第一款及第六款計算。八、第一款至第三款及第六款小數點均算至小數點第四位，第五位以下四捨五入。
+* 65 公職人員選舉，除另有規定外，按各選舉區應選出之名額，以候選人得票比較多數者為當選；票數相同時，以抽籤決定之。全國不分區、僑居國外國民選舉當選名額之分配，依左列規定：一、以國民大會代表、立法委員區域及山胞選舉，各政黨所推薦候選人得票數之和，為各政黨之得票數。以各政黨得票數相加之和，除各該政黨得票數，求得各該政黨國民大會代表、立法委員得票比率。二、以應選名額乘前款得票比率所得積數之整數，即為各政黨分配之當選名額；按政黨名單順位依次當選。三、依前款規定分配當選名額，如有剩餘名額，應按各政黨分配當選名額後之剩餘數大小，依次分配剩餘名額。剩餘數相同時，以抽籤決定之。四、各政黨分配之婦女當選名額少於應行當選名額時，優先分配當選。五、政黨登記之候選人名單人數少於應分配之當選名額時，或婦女候選人數少於應分配之婦女當選名額時，均視同缺額。六、各該政黨之得票比率未達百分之五以上者，不予分配當選名額。其得票數不列入第一款計算。七、無黨籍及未經政黨推薦之候選人之得票數，不列入第一款及第六款計算。八、第一款至第三款及第六款小數點均算至小數點第四位，第五位以下四捨五入。
 
-> 釋：一、配合憲法增修條文第十五條規定，刪除第三項第一款監察委員選舉之規定。二、第三項第七款有關不予列入政黨得票數計算之規定，再行增列於投票日前喪失黨籍之候選人得票數亦不予列計之規定。三、第三項第八款酌作文字修正。
+> 釋：一、原條文第二項有關婦女當選名額計算方式之規定併同本法施行細則第七十六條規定，移列至第六十五條之一明定之，其後項次配合調整。二、憲法增修條文業將「山胞」修正為「原住民」，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關「山胞」應修正為「原住民」部分，暫不修正。
 
-* 66 候選人數未超過或不足各該選舉區應選出之名額時，應以所得票數達左列規定以上者始為當選。但村、里長選舉不在此限：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉，為各該選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十。二、省（市）長、縣（市）長、鄉（鎮、市）長選舉，為各該選舉區選舉人總數百分之二十。前項選舉結果未能當選或當選不足應選出之名額時，省（市）長、縣（市）長、鄉（鎮、市）長應於投票後一定期間內公告重行選舉；國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表視同缺額。同一選舉區內缺額達二分之一時，應定期補選。全國不分區，僑居國外國民之選舉，不適用前二項規定。
+* 65.1 公職人員選舉，其婦女當選人少於應行當選名額時，應將婦女候選人所得選舉票單獨計算，以得票比較多數者為當選；其計算方式，依左列規定。但無婦女候選人者，不在此限：一、國民大會代表、立法委員選舉，分區選舉時，如各選舉區開票結果，婦女當選人不足規定名額，應將各選舉區未當選婦女候選人所得票數單獨計算，相互比較，以得票數較多之婦女候選人於其選舉區之當選名額中依序當選。二、直轄市議員、縣（市）議員、鄉（鎮、市）民代表選舉，分區選舉開票結果，如婦女當選人不足各該選舉區規定名額時，應將該選舉區婦女候選人所得票數，單獨計算，以得票較多之婦女候選人，依次當選。三、平地山胞、山地山胞選出之縣（市）議員、鄉（鎮、市）民代表選舉，婦女當選人不足規定名額時，比照第一款規定辦理。前條第二項第四款各政黨分配之婦女當選名額，為至少應當選之名額，應依左列規定分配當選：一、各政黨分配之婦女當選名額，如按各政黨名單順位依序分配當選名額，婦女當選人少於應行當選名額時，應由名單中順位在後之婦女候選人優先分配當選。二、政黨登記之候選人名單中之婦女候選人數少於應分配之婦女當選名額時，視同缺額。
 
-> 釋：一、配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。二、配合地方制度法制化，第一項第二款增列省（市）長選舉最低當選票數之計算；第二項增列省（市）長重行選舉之規定。
+> 釋：一、本條新增。二、原條文第六十五條第二項有關婦女當選名額計算方式之規定，併同本法施行細則第七十六條，移列至本條規定。三、憲法增修條文業將「山胞」修正為「原住民」，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關「山胞」應修正為「原住民」部分，暫不修正。
 
-* 67 當選人在就職前死亡或經判決當選無效確定者，依左列規定辦理：一、直轄市長、縣（市）長、鄉（鎮、市）長，村、里長部分，應定期重行選舉。二、國民大會代表、立法委員、直轄市議員、縣（市）議員、鄉（鎮、市）民代表當選人就職前非自然死亡者，視同缺額；同一選舉區內缺額達三分之一時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。三、國民大會代表、立法委員、直轄市議員、縣（市）議員、鄉（鎮、市）民代表當選人就職前自然死亡或經判決當選無效者，依得票數之順序遞補；無人遞補時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。全國不分區、僑居國外國民選舉當選人，在就職前喪失其所屬政黨黨籍者，喪失其當選資格；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。前項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案。
+* 66 候選人數未超過或不足各該選舉區應選出之名額時，應以所得票數達左列規定以上者始為當選。但村、里長選舉不在此限：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉，為各該選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十。二、省（市）長、縣（市）長、鄉（鎮、市）長選舉，為各該選舉區選舉人總數百分之二十。前項選舉結果未能當選或當選不足應選出之名額時，省（市）長、縣（市）長、鄉（鎮、市）長應自投票之日起三個月內完成重行選舉投票；國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表視同缺額。同一選舉區內缺額達二分之一時，應自事實發生之日起三個月內完成補選投票。全國不分區、僑居國外國民之選舉，不適用前二項規定。
 
-> 釋：一、第一項第一款「省（市）」修正為「直轄市」。二、當選人如係在就職前自然死亡或被判決當選無效，為了選區民眾的利益，同意依順序遞補；但是當選人如係意外死亡甚至被謀殺身亡，則絕對不能遞補，以免發生更多的悲劇，甚至有人以不當的手法爭取當選。爰修正第一項第二、三款。三、將缺額補選規定由原先二分之一放寬為三分之一，使選區民眾可得到更多民意關照。爰修正第一項第二款。
+> 釋：一、配合憲法增修條文，省議員及省長選舉業已停止辦理，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關省議員及省長選舉部分暫不修正。二、將本法施行細則第七十八條有關重行選舉、補選辦理之期限，移列於第二項規定之。
+
+* 67 當選人在就職前死亡或經判決當選無效確定者，依左列規定辦理：一、直轄市長、縣（市）長、鄉（鎮、市）長、村、里長部分，應定期重行選舉。二、國民大會代表、立法委員、直轄市議員、縣（市）議員、鄉（鎮、市）民代表當選人就職前非自然死亡者，視同缺額；同一選舉區內缺額達三分之一時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。三、國民大會代表、立法委員、直轄市議員、縣（市）議員、鄉（鎮、市）民代表當選人就職前自然死亡或經判決當選無效者，依得票數之順序遞補；無人遞補時，應定期補選。但全國不分區、僑居國外國民選出之國民大會代表、立法委員不在此限；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。前項第一款所定之重行選舉及第二款、第三款所定之補選，應自死亡之日或選舉委員會收到法院判決書之日起三個月內完成投票；前項第二款、第三款所定之遞補，應自死亡之日或選舉委員會收到法院判決書之日起十五日內，由選舉委員會公告遞補當選人名單。全國不分區、僑居國外國民選舉當選人，在就職前喪失其所屬政黨黨籍者，自喪失黨籍之日起，喪失其當選資格；其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。前項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案，並自黨籍喪失證明書送達之日起十五日內，由中央選舉委員會公告遞補當選人名單。
+
+> 釋：一、為明確規範直轄市長、縣（市）長、鄉（鎮、市）長、村、里長重行選舉投票期限、各級民意代表當選人補選投票期限及遞補期限，將本法施行細則第七十八條第一項、第七十八條之一第一項、第二項，移列本條第二項，並配合修正第四項文字。二、原條文第二項移列為第三項，並配合修正條文第二項之增列酌作修正，以資明確。
 
 * 67.1 當選人兼具外國國籍者，應於當選後就職前放棄外國國籍；逾期未放棄者，視為當選無效；其所遺缺額，依前條規定辦理。
 
@@ -294,33 +314,45 @@
 
 * 68 當選人應於規定之日就職，重行選舉或重行投票之當選人未能於規定之日就職者，其任期仍應自該規定之日起算。
 
-* 68.1 中央公職人員，於就職後因死亡、辭職或其他事由出缺時，依左列規定辦理：一、區域、山胞選出者，同一選舉區內缺額達二分之一時，應由中央選舉委員會定期補選。但其所遺任期不足一年時，不予補選。二、全國不分區、僑居國外國民選出者，其所遺缺額，由該政黨登記之候選人名單按順位依序遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。全國不分區、僑居國外國民選出之中央公職人員，在就職後喪失其所屬政黨黨籍者，喪失其中央公職人員資格，由中央選舉委員會函請國民大會或立法院予以註銷。其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。前項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案。第一項第二款及第二項遞補之規定，於第二屆國民大會代表及第二屆立法委員適用之。
+* 68.1 中央公職人員，於就職後因死亡、辭職或其他事由出缺時，依左列規定辦理：一、區域、山胞選出者，同一選舉區內缺額達二分之一時，應由中央選舉委員會定期補選。但其所遺任期不足一年時，不予補選。二、全國不分區、僑居國外國民選出者，其所遺缺額，由該政黨登記之候選人名單按順位依序遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。全國不分區、僑居國外國民選出之中央公職人員，在就職後喪失其所屬政黨黨籍者，自喪失黨籍之日起，喪失其中央公職人員資格，由中央選舉委員會函請國民大會或立法院予以註銷。其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。第一項第一款所定之補選，應自死亡之日、辭職之日或選舉委員會收到法院判決書之日起三個月內完成投票；第一項第二款、前項所定之遞補，應自國民大會或立法院註銷名籍公函送達之日起十五日內，由中央選舉委員會公告遞補名單。第二項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案。第一項第二款及第二項遞補之規定，於第二屆國民大會代表及第二屆立法委員適用之。
 
-> 釋：一、將第一項分列為二款：１．第一款維持原條文有關區域、山胞選出者，出缺時之處理規定，唯配合憲法增修條文第十五條規定，刪除「或省（市）議會選出者」之規定。另將「行使職務期間」修正為「任期」。２．增列第二款有關全國不分區、僑居國外國民選出者，就職後出缺之遞補之規定。二、增列第二項、第三項有關全國不分區、僑居國外國民選出之中央公職人員在就職後喪失其所屬政黨黨籍者，其所遺缺額遞補之規定。三、基於法律不溯既往原則，增列第四項明定第一項第二款及第二項遞補之規定，於第二屆國民大會代表及第二屆立法委員適用之。
+> 釋：一、憲法增修條文業將「山胞」修正為「原住民」，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關「山胞」應修正為「原住民」部分，暫不修正。二、第二項配合第三項之增列酌作修正，以資明確。三、增列第三項，將本法施行細則第七十八條第二項、第七十八條之一第四項有關辦理補選及遞補期限相關規定移列至本條規定。四、原條文第三項、第四項項次配合調整為第四項、第五項。
 
 * 69 公職人員之罷免，得由原選舉區選舉人向選舉委員會提出罷免案。但就職未滿一年者，不得罷免。全國不分區、僑居國外國民選舉之當選人，不適用罷免之規定。
 
 > 釋：增列第二項，明定全國不分區及僑居國外國民選舉之候選人不適用罷免之規定。
 
-* 70 罷免案應附理由書，以被罷免人原選舉區選舉人為提議人，其人數應合於左列規定：一、國民大會代表、立法委員、省（市）議員，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之三以上。二、縣（市）議員、鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之五以上。三、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長，為原選舉區選舉人總數百分之二以上。前項罷免案，一案不得為罷免二人以上之提議。但有二個以上罷免案時，得同時投票。
+* 70 罷免案以被罷免人原選舉區選舉人為提議人，由提議人之領銜人三人，填具罷免提議書一份，檢附罷免理由書正、副本各一份，提議人名冊二份，向選舉委員會提出。前項提議人人數應為原選舉區選舉人總數百分之二以上，其計算數值尾數如為小數者，該小數即以整數一計算。第一項提議人名冊，應依規定格式逐欄詳實填寫，並分村、里裝訂成冊。罷免理由書以不超過五千字為限。罷免案，一案不得為二人以上之提議。但有二個以上罷免案時，得同時投票。罷免案表件不全或不符前二項規定者，選舉委員會應拒絕受理。
 
-> 釋：一、配合憲法增修條文第十五條之規定，爰將第一項第二款「監察委員罷免有關提議人數規定」刪除，並將原第一項第三、四款移列為第一項第二、三款。二、配合地方制度法制化，增列省（市）長罷免提議之規定，第一項第三款「縣（市）長」之上增列「省（市）長」三字。
+> 釋：一、將本法施行細則第八十條有關罷免案提出，應由提議人之領銜人三人提出及備具相關表件等規定移列本條規定，並酌作文字修正。二、罷免案之表件不全、不符規定者應拒絕受理，以現行實務作業事涉人民權益，宜提昇為法律位階，爰於第五項予以增列。
 
-* 71 現役軍人、警察或公務人員不得為罷免案提議人。
+* 71 現役軍人、警察或公務人員不得為罷免案提議人。前項所稱公務人員，為公務員服務法第二十四條規定之公務員。
+
+> 釋：增列第二項，將本法施行細則第三十四條第一項有關公務人員之定義移列本條規定。
 
 * 72 罷免案於未徵求連署前，經提議人總數三分之二以上同意，得以書面向選舉委員會撤回之。
 
-* 73 選舉委員會收到罷免案提議後，應於十五日內查對其提議人；如合於規定，即通知提議人之領銜人於十日內領取連署人名冊，並於一定期間內徵求連署。前項提議人有不合規定者刪除，並即通知提議人之領銜人於五日內補足；逾期不予受理。
+* 73 選舉委員會收到罷免案提議後，應於二十五日內，查對提議人名冊，有左列情事之一者，應予刪除：一、提議人不合第七十條第一項規定者。二、提議人有第七十一條第一項之身分者。三、提議人姓名、戶籍地址書寫錯誤或不明者。四、提議人未填具本人國民身分證統一編號或有錯誤、不明者。五、提議人名冊未經提議人簽名或蓋章者。六、提議人提議，有偽造情事者。提議人名冊，經依前項規定刪除後，如不足規定人數，由選舉委員會通知提議人之領銜人於五日內補提，屆期不補提或補提仍不足規定人數者，均不予受理。符合規定人數，即函告提議人之領銜人自收到通知之次日起十日內領取連署人名冊，並於一定期間內徵求連署，未依限領取連署人名冊者，視為放棄提議。前項補提，以一次為限。補提之提議人名冊，應依第一項規定處理。
 
-* 74 罷免案之連署人，以被罷免人原選舉區選舉人為連署人，其人數應合於左列規定：一、國民大會代表、立法委員、省（市）議員，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十二以上。二、縣（市）議員、鄉（鎮、市）民代表，為原選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十五以上。三、省（市）長、縣（市）長、鄉（鎮、市）長，為原選舉區選舉人總數百分之十三以上。四、村、里長，為原選舉區選舉人總數百分之十八以上。
+> 釋：一、第一項參照本法施行細則第八十二條第一項規定，將罷免案提議人名冊查對之相關作業程序，提升至本法規定，並增列提議人名冊應予刪除情事，俾資周延；同時配合將第一項查對時間由「十五日」修正為「二十五日」。二、第二項參照本法施行細則第八十二條第二項規定，將罷免案提議人名冊補正及領取連署人名冊規定，提升至本法規定，並酌作文字修正。三、增列第三項，將本法施行細則第八十二條第三項有關提議人名冊之補提以一次為限，及補提之名冊應依第一項規定處理移列。
 
-> 釋：一、配合憲法增修條文第十五條之規定，爰將第二款監察委員之規定刪除，並將原第三、四、五款移列第二、三、四款。二、配合地方制度法制化，第三款增列省（市）長罷免連署之規定。
+* 73.1 前條第二項所定徵求連署之期間如左：一、立法委員、直轄市議員、直轄市長、縣（市）長之罷免為三十日。二、縣（市）議員、鄉（鎮、市）長之罷免為二十日。三、鄉（鎮、市）民代表、村、里長之罷免為十日。前項期間之計算，自領得連署人名冊之次日起算。罷免案提議人之領銜人，應將連署人名冊及抄附連署人名冊副本，分村、里裝訂成冊，於第一項規定期間內向選舉委員會提出，逾期不予受理。
+
+> 釋：一、本條新增。二、將本法施行細則第八十三條有關各種公職人員罷免案徵求連署之期間及連署人名冊之提出規定，移列本條規定。
+
+* 74 罷免案之連署人，以被罷免人原選舉區選舉人為連署人，其人數應為原選舉區選舉人總數百分之十三以上。前項罷免案連署人人數，其計算數值尾數如為小數者，該小數即以整數一計算。同一罷免案之提議人不得為連署人。提議人及連署人之人數應分別計算。
+
+> 釋：將本法施行細則第八十四條規定移列第二項、第三項規定。
 
 * 75 第七十條及第七十四條所稱選舉人總數，以被罷免人當選時原選舉區之選舉人總數為準；所稱選舉人，其年齡及居住期間之計算，以罷免案提出日為準。
 
-* 76 罷免案經查明連署合於規定後，選舉委員會應為罷免案成立之宣告；其不合規定經宣告不成立之罷免案，原提議人對同一被罷免人自宣告不成立之日起，一年內不得再為罷免案之提議。
+* 76 選舉委員會收到罷免案連署人名冊後，立法委員、直轄市議員、直轄市長、縣（市）長之罷免應於四十日內，縣（市）議員、鄉（鎮、市）長之罷免應於二十日內，鄉（鎮、市）民代表、村（里）長之罷免應於十五日內，查對連署人名冊，有左列各款情事之一者，應予刪除。但第一款之情事，選舉委員會應逕為不成立之宣告：一、連署人不合第七十四條第一項規定者。二、連署人有第七十四條第三項規定情事者。三、連署人姓名、戶籍地址書寫錯誤或不明者。四、連署人未填具本人國民身分證統一編號或有錯誤、不明者。五、連署人名冊未經連署人簽名或蓋章者。六、連署人連署，有偽造情事者。前項連署人名冊，經查對後，選舉委員會應重行核實連署人數，為罷免案成立或不成立之宣告；經宣告不成立之罷免案，原提議人對同一被罷免人自宣告不成立之日起，一年內不得再為罷免案之提案。
 
-* 77 罷免案宣告成立後，應將罷免理由書副本送交被罷免人，於十日內提出答辯書。
+> 釋：一、將本法施行細則第八十五條第一項有關罷免案連署人名冊查對之期限及方式，提升至本條規定，並增列連署人名冊應予刪除情事，俾資周延。二、原條文第一項移列為第二項，將本法施行細則第八十五條規定移列，並酌作文字修正。
+
+* 77 罷免案宣告成立後，應將罷免理由書副本送交被罷免人，於十日內提出答辯書。前項答辯書內容，以不超過一萬字為限。
+
+> 釋：將本法施行細則第八十六條第二項有關答辯書字數限制移列第二項規定。
 
 * 78 選舉委員會應於被罷免人提出答辯書期間屆滿後五日內，就左列事項公告之：一、罷免投票日期及投票起、止時間。二、罷免理由書。三、答辯書。但被罷免人不於規定期間內提出答辯書者，不予公告。
 
@@ -336,13 +368,17 @@
 
 > 釋：一、第一項未修正。二、增列第二項，明定罷免案投票人不得亮票，以保持投票之秘密性。
 
-* 82 罷免案之投票人及投票、開票，準用本法有關選舉人及投票、開票之規定。
+* 82 罷免案之投票人、投票人名冊及投票、開票，準用本法有關選舉人、選舉人名冊及投票、開票之規定。
+
+> 釋：將本法施行細則第八十七條有關罷免案投票人名冊準用選舉人名冊之規定納入。
 
 * 83 罷免案投票結果，投票人數應合於左列規定，同意罷免票多於不同意罷免票者，即為通過：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表，應有原選舉區選舉人三分之一以上之投票。二、省（市）長、縣（市）長、鄉（鎮、市）長、村、里長，應有原選舉區選舉人二分之一以上之投票。投票人數不足前項規定數額或同意罷免票未超過不同意罷免票者，均為否決。
 
 > 釋：一、配合憲法增修條文第十五條之規定，爰將第一項第二款有關監察委員罷免案投票人數之限制規定刪除，並將第一項第三款移列為第一項第二款。二、配合地方制度法制化，增列省（市）長罷免投票之規定，第一項第二款「縣（市）長」之上增列「省（市）長」三字。
 
-* 84 罷免案經投票後，選舉委員會應於投票完畢七日內公告罷免投票結果。罷免案通過者，被罷免人應自公告之日起，解除職務。
+* 84 罷免案經投票後，選舉委員會應於投票完畢七日內公告罷免投票結果。罷免案通過者，被罷免人應自公告之日起，解除職務。前項罷免案通過後，依規定應辦理補選者，應自罷免投票結果公告之日起三個月內完成補選投票。但經提起罷免訴訟者，在訴訟程序終結前，不予補選。
+
+> 釋：將本法施行細則第八十九條罷免案通過後，依規定應辦理補選之完成期限，移列第二項規定。
 
 * 85 罷免案通過者，被罷免人自解除職務之日起，四年內不得為同一公職人員候選人；其於罷免案宣告成立後辭職者亦同。罷免案否決者，在該被罷免人之任期內，不得對其再為罷免案之提議。
 
