軍事審判法 2003.5.27

--- a/行政-國防/軍事審判法.md
+++ b/行政-國防/軍事審判法.md
@@ -110,9 +110,9 @@
 
 > 釋：一、本條新增。二、明定高等軍事法院管轄案件之範圍。三、為維繫軍中倫理，將、校官之初審案件，劃歸高等軍事法院管轄。
 
-* 29 最高軍事法院管轄案件如下：一、不服高等軍事法院及其分院初審判決而上訴之案件。二、不服高等軍事法院及其分院裁定而抗告之案件。三、本法第二百零四條之案件。
+* 29 最高軍事法院管轄案件如下：一、不服高等軍事法院及其分院初審判決而上訴之案件。二、不服高等軍事法院及其分院初審裁定而抗告之案件。三、本法第二百零四條之案件。
 
-> 釋：一、本條新增。二、明定最高軍事法院管轄案件之範圍。
+> 釋：按高等軍事法院及其分院依本法第二十八條第一款規定，管轄校官以上初審案件；依第二款、第三款規定，管轄尉官以下上訴及抗告案件。不服其就初審案件所為裁定者，固得依同法第二百零七條向最高軍事法院提起抗告，惟其就初審裁定提起抗告所為裁定，則屬抗告軍事法院之裁定，依同法第二百十四條規定，不得再行抗告，兩者屬性有別。為免混淆，爰於第二款「裁定」文字之上增列「初審」二字，使臻明確。
 
 * 30 第一條第二項但書規定，非現役軍人犯罪案件之管轄，依士兵之規定。但文職公務員應比照軍官、士官官階，非現役之軍官、士官，依其原有官階定其管轄。俘虜、投降人犯罪案件之管轄，依士兵之規定。
 
@@ -138,9 +138,9 @@
 
 > 釋：一、本條新增。二、有關指定管轄、競合管轄及牽連案件之管轄等，刑事訴訟法均有明確之規定，爰增列準用條文，以求立法經濟。
 
-* 36 軍事法庭開庭，於軍事法院內為之。但高等軍事法院以下各級軍事法院或分院於必要時，得在管轄區域內指定適當地方臨時開庭。前項但書情形，於戰時上訴以提審或蒞審行言詞審理時準用之。
+* 36 軍事法庭開庭，於軍事法院內為之。但必要時，得在管轄區域內指定適當地方臨時開庭。前項但書情形，於戰時上訴以提審或蒞審行言詞審理時準用之。
 
-> 釋：一、本條新增。二、參照法院組織法第八十四條、第八十五條之規定並配合本法戰時上訴中案件有關提審、蒞審之修正規定增訂之。
+> 釋：本法有關第二審之規定原擬採書面審理之覆判制度，原則上毋庸開庭行言詞審理，玆既於八十八年修正時改採言詞審理之上訴制度，最高軍事法院平時辦理上訴案件即須開庭行言詞審理，則第一項但書有關必要時得在軍事法院外臨時開庭者限於高等軍事法院以下各級軍事法院規定，即欠周延，爰酌作修正，以符實際。
 
 * 37 軍事法庭訴訟之辯論及裁判之宣示，應公開行之。但有妨害國家安全、公共秩序、善良風俗或危害證人生命、身體安全之虞時，得不予公開。軍事法庭不公開時，審判長應將不公開之理由宣示。前項情形，審判長仍得允許無妨礙之人旁聽。
 
@@ -230,17 +230,17 @@
 
 > 釋：一、條次變更。本條為原條文第六十二條移列。二、第一項部分:（一）第一款、第二款、第三款均未修正。（二）第四款將「非軍事審判機關之軍事機關」修正為「軍事機關」。（三）第五款配合修正條文第三條第二款之規定，予以修正。三、參酌刑事訴訟法第二百二十九條之體例，將原條文第一百四十二條、第一百四十三條合併，移列第二項，並配合司法院大法官議決第三九二號解釋意旨，將偵查結果之移送時間及犯罪嫌疑人之解送時間，均予以修正。四、為保障人權，明定未經拘提或逮捕者，不得解送軍事檢察官處理，增列為第三項。
 
-* 59 下列人員為軍法警察官，應受軍事檢察官之指揮，偵查犯罪：一、憲兵官長、士官。二、警察官長。三、特設軍事機關之稽查官長。四、依法令關於特定事項，得行使司法警察官之職權者。前項軍法警察官知有犯罪嫌疑者，應報告該管軍事檢察官、軍法警察官或其直屬長官。但得不待其指揮，逕行調查犯罪嫌疑人犯罪情形及蒐集證據。
+* 59 下列人員為軍法警察官，應受軍事檢察官之指揮，偵查犯罪。一、憲兵官長、士官。二、警察官長。三、特設軍事機關之稽查官長。四、依法令關於特定事項，得行使司法警察官之職權者。前項軍法警察官知有犯罪嫌疑者，應即開始調查，並將調查之情形報告該管軍事檢察官及前條之軍法警察官或其直屬長官。實施前項調查有必要時，得封鎖犯罪現場，並為即時之勘察。
 
-> 釋：一、條次變更。本條為原條文第六十三條移列，並作文字修正。二、參酌刑事訴訟法第二百三十條體例，將原條文第一百三十九條第二項、第三項、第四項內容合併，修正為第二項。
+> 釋：一、參照九十年一月十二日修正公布之刑事訴訟法第二百三十條第二項規定，酌修本條第二項，以擴張軍法警察官作為第一線偵查主體之權限，並同時加強該管軍事檢察官及上級軍法警察官或其具有軍法警察官身分之直屬長官之監督權限，俾強化辦案效能。二、另參照前開刑事訴訟法條文第三項規定，增列本條第三項，以利證據之保全。
 
-* 60 下列員兵為軍法警察，應受軍事檢察官及軍法警察官之命令，偵查犯罪：一、憲兵。二、警察。三、特設軍事機關之巡查及稽查隊員。四、依法令關於特定事項，得行使司法警察之職權者。前項軍法警察知有犯罪嫌疑者，應報告該管軍事檢察官、軍法警察官或其直屬長官。但得不待其指揮，逕行調查犯罪嫌疑人犯罪情形及蒐集證據。
+* 60 下列人員為軍法警察，應受軍事檢察官及軍法警察官之命令，偵查犯罪。一、憲兵。二、警察。三、特設軍事機關之巡查及稽查隊員。四、依法令關於特定事項，得行使司法警察之職權者。前項軍法警察知有犯罪嫌疑者，應即開始調查，並將調查之情形報告該管軍事檢察官、軍法警察官或其直屬長官。實施前項調查有必要時，得封鎖犯罪現場，並為即時之勘察。
 
-> 釋：一、條次變更。本條為原條文第六十四條移列。二、第一項第一款、第二款作文字修正，以求簡潔。三、配合修正條文第五十九條修正理由，並參照刑事訴訟法第二百三十一條之規定，於第二項增訂報告義務及蒐證職權。
+> 釋：一、第一項「員兵」修正為「人員」。二、參照九十年一月十二日修正公布之刑事訴訟法第二百三十一條第二項規定，酌修第二項，以擴張軍法警察作為第一線偵查主體之權限，並同時加強該管軍事檢察官及軍法警察官或其具有軍法警察官身分之直屬長官之監督權限，俾強化辦案效能。三、另參照前開刑事訴訟法條文第三項規定，增列本條第三項，以利證據之保全。
 
-* 61 軍事檢察官依前三條之規定，執行職務時，應出示指揮證。
+* 61 軍事檢察官依前三條之規定，執行職務時，應出示指揮證。前項規定，於軍事審判官依法執行職務時，準用之。
 
-> 釋：條次變更，本條為原條文第六十五條移列，文字未修正。
+> 釋：一、原條文未修正，列為第一項。二、參照「調度司法警察條例」第一條規定，增訂第二項。
 
 * 62 軍事檢察官於審判庭審判期日，應蒞庭執行職務。軍事檢察官於戰時上訴案件，得提出意見書。
 
@@ -430,9 +430,9 @@
 
 > 釋：條次變更，本條為原條文第一百十三條移列，文字未修正。
 
-* 109 撤銷或停止羈押之許可，以軍事法院之裁定行之。案件在最高法院或高等法院上訴中，而卷宗及證物已送交該管法院者，前項處分由第二審之軍事法院裁定之。軍事檢察官於偵查中命具保、責付或限制住居及為沒入保證金、退保之處分者，以命令行之。
+* 109 關於撤銷或停止羈押及其命具保、責付、限制住居、沒入保證金或退保，以軍事法院之裁定行之。案件在第三審上訴中，而卷宗及證物已送交該管法院者，前項處分及其他各項羈押被告之處分，仍由第二審之軍事法院裁定之。軍事檢察官於偵查中命具保、責付或限制住居及為沒入保證金、退保之處分者，以命令行之。
 
-> 釋：一、條次變更，本條為原條文第一百十四條移列。。二、原條文第一項之再執行羈押，性質上亦屬羈押，本應適用羈押之規定，該部分已無存在必要，爰予刪除。三、案件在最高法院、高等法院上訴中者，有關撤銷或停止羈押之裁定，刑事訴訟法第一百二十一條第二項已明定由其他審級法院為之，爰配合修正為由第二審軍事法院裁定，列為第二項。四、明定軍事檢察官在偵查中所為具保、退保或沒入保證金等處分，應以軍事檢察官之命令行之，爰增訂第三項。
+> 釋：一、第一項規定係沿襲舊法，僅規定撤銷或停止羈押之許可，由軍事法院裁定之，不若刑事訴訟法第一百二十一條第一項規定之周延，基於減少軍司法訴訟程序差異之理念，雖得予以準用，究不若於本項明定而直接適用，爰修正，俾與刑事訴訟法上開規定一致；另酌作文字修正。二、案件在最高法院或高等法院亦即第三審上訴中，而卷證已送交該管法院者，因第三審為法律審，不為事實之調查，為免違背第三審為法律審之原則，並探究八十六年十二月十九日修正刑事訴訟法第一百二十一條第二項及第三項之立法精神，關於羈押被告、延長羈押及其他有關之各項處分，仍由事實審即第二審之軍事法院為之為宜，爰修正之。
 
 * 110 刑事訴訟法關於被告訊問及羈押之規定，與本章不相牴觸者，準用之。
 
@@ -449,6 +449,14 @@
 * 112 軍事檢察官、軍法警察官、軍法警察或執法官兵逮捕被告、犯罪嫌疑人或執行拘提、羈押時，雖無搜索票，得逕行搜索其身體、隨身攜帶之物件、所使用之交通工具及其立即可觸及之處所。有下列情形之一者，軍事檢察官、軍法警察官、軍法警察雖無搜索票，得逕行搜索住宅或其他處所：一、因逮捕被告、犯罪嫌疑人或執行拘提、羈押者。二、因追躡現行犯或逮捕脫逃人者。三、有事實足信為有人在內犯罪而情形急迫者。軍事檢察官於偵查中有相當理由認為情況急迫，非迅速搜索，證據有偽造、變造、湮滅或隱匿之虞者，得逕行搜索，或指揮軍法警察官、軍法警察或執法官兵執行搜索。前二項搜索，由軍事檢察官為之者，應於實施後三日內陳報該管軍事法院；由軍法警察官、軍法警察或執法官兵為之者，應於執行後三日內報告該管軍事法院檢察署軍事檢察官及軍事法院。軍事法院認為不應准許者，得於三日內撤銷之。
 
 > 釋：一、第一項依據刑事訴訟法第一百三十條意旨修正。二、第二、三、四項依據刑事訴訟法第一百三十一條意旨修正。三、第一、二項均漏列「軍事檢察官」，補列之。
+
+* 112.1 搜索，經受搜索人出於自願性同意者，得不使用搜索票。但執行人員應出示證件，並將其同意之意旨記載於筆錄。
+
+> 釋：一、本條新增。二、參照九十年一月十二日修正公布之刑事訴訟法第一百三十一條之一，增訂自願性同意搜索得不使用搜索票，惟應將受搜索人同意之意旨載明於筆錄之規定。
+
+* 112.2 軍事檢察官或軍法警察官於聲請核發之搜索票執行後，應將執行結果陳報核發搜索票之軍事法院，如未能執行者，應敘明其事由。
+
+> 釋：一、本條新增。二、參照九十年一月十二日修正公布之刑事訴訟法第一百三十二條之一，規定執行搜索完畢後，聲請核發搜索票之人員，應將執行結果陳報核發搜索票之軍事法院，如未能執行者，應敘明其事由，以利查考。
 
 * 113 政府機關、公務員或曾為公務員之人所持有或保管之文書及其他物件應扣押者，應請求交付。但於必要時得搜索之。前項情形，如為其職務上應守秘密者，非經該管監督機關或公務員允許，不得扣押。前項允許，除有妨害國家之利益者外，不得拒絕。
 
@@ -530,9 +538,9 @@
 
 > 釋：一、條次變更，本條為原條文第一百三十八條移列。二、有關自首要件之實體事項，係屬刑法之規範內容，本條之規定係為程序事項，爰參照刑事訴訟法第二百四十四條予以修正，並增列「軍法警察J，以應事實需要。
 
-* 133 軍事檢察官因告發、告訴、自首或其他情事，知有犯罪嫌疑者，應即開始偵查。
+* 133 軍事檢察官因告發、告訴、自首或其他情事，知有犯罪嫌疑者，應即開始偵查。前項偵查，軍事檢察官得限期命第五十九條之軍法警察官或第六十條之軍法警察調查犯罪情形及蒐集證據，並提出報告。必要時，得將相關卷證一併發交。
 
-> 釋：一、條次變更，本條為原條文第一百三十九條移列。二、參照刑事訴訟法第二百二十八條第一項，將第一項之「偵查犯人及證據」修正為「開始偵查」。三、第二項、第三項、第四項內容，本法修正條文第五十九條、第六十條已有規定，均予刪除。
+> 釋：一、原條文未修正，列為第一項。二、參照九十年一月十二日修正公布之刑事訴訟法第二百二十八條第二項規定，增訂第二項規定軍事檢察官得限期命軍法警察官或軍法警察調查犯罪情形及蒐集證據，並提出報告。必要時，得將相關卷證一併發交，以增強軍事檢察官之辦案效能。
 
 * 134 刑法第一百十六條、第一百十八條請求乃論之罪，外國政府之請求，應由外交部轉請國防部令知該管軍事檢察官偵查。
 
@@ -722,9 +730,9 @@
 
 > 釋：一、條次變更，本條為原條文第一百八十七條移列。二、因不採覆判制，故本條條文文字作相應修正。三、為兼顧告訴人及被害人之權益，並配合本法刪除原條文第一百三十三條軍事長官核判權及覆議權，爰增訂第二項。原條文第二項以下依序向後移列。四、被告之直屬長官為被告之利益，得獨立上訴於上級軍事法院，爰與法定代理人並列為第四項。五、原審之辯護人並非獨立上訴於上級軍事法院，依司法院大法官議決第三○六號解釋，應以被告名義為之，爰於第五項明定。六、本法已增訂部分案件得上訴最高法院或高等法院，爰配合修正第六項。
 
-* 181 判決經依前條上訴後，由原審軍事法院轉送管轄之上級軍事法院審判。但將官案件之判決及宣告死刑或無期徒刑之判決，應不待上訴依職權送請管轄之上級軍事法院審判，並通知當事人。宣告死刑、無期徒刑之上訴判決，原上訴軍事法院應依職權逕送最高法院審判，並通知當事人。第一項但書及前項情形，視為被告已提起上訴。被告不服最高軍事法院宣告有期徒刑以上，或高等軍事法院宣告死刑、無期徒刑之上訴判決者，得以判決違背法令為理由，向最高法院提起上訴。被告不服高等軍事法院宣告有期徒刑之上訴判決者，得以判決違背法令為理由，向高等法院提起上訴。對於前項高等法院之判決，不得再上訴。第二項、第四項及第五項之規定，於戰時及第二百零四條不適用之。
+* 181 判決經依前條上訴後，由原審軍事法院轉送管轄之上級軍事法院審判。但將官案件之判決及宣告死刑或無期徒刑之判決，應不待上訴依職權送請管轄之上級軍事法院審判，並通知當事人。宣告死刑、無期徒刑之上訴判決，原上訴軍事法院應依職權逕送最高法院審判，並通知當事人。第一項但書及前項情形，視為被告已提起上訴。當事人不服最高軍事法院宣告有期徒刑以上，或高等軍事法院宣告死刑、無期徒刑之上訴判決者，得以判決違背法令為理由，向最高法院提起上訴。當事人不服高等軍事法院宣告有期徒刑之上訴判決者，得以判決違背法令為理由，向高等法院提起上訴。對於前項高等法院之判決，不得再上訴。第二項、第四項及第五項之規定，於戰時及第二百零四條不適用之。
 
-> 釋：一、條次變更，本條為原條文第一百八十八條移列。二、因不採覆判制，故條文文字配合作修正。三、將第一項「管轄之覆判機關」修正為「管轄之上級軍事法院」，並作文字修正。另參酌刑事訴訟法第三百四十四條第四項體例，增訂職權審判案件應通知當事人之規定。四、為保障人權，參照刑事訴訟法前述條項之規定，明定宣告死刑、無期徒刑之上訴判決，應依職權逕送最高法院審判，並通知當事人，增訂為第二項。五、參照刑事訴訟法前述條文第五項，增訂「擬制上訴」之規定為第三項。六、依司法院大法官議決第四二一六號解釋，平時經終審軍事審判機關宣告有期徒刑以上之案件，應許被告以判決違背法令為理由向普通法院請求救濟，係基於憲法保障軍人訴訟權利及司法院為國家最高司法機關之意旨，使軍人得向最高法院上訴，增加審級救濟之利益，爰衡酌司法資源能量有限，應予妥適分配，明定被告不服中央軍事法院宣告有期徒刑以上之上訴判決者，得以判決違背法令為理由，向最高法院提起上訴，即便屬刑事訴訟法第三百七十六條之案件，既為中央軍事法院所判，仍得以最高法院為終審法院，增訂為第四項。七、高級軍事法院宣告死刑或無期徒刑之上訴判決，已依第二項或第四項之規定依職權或依聲請上訴最高法院，其餘有期徒刑之判決，亦得以判決違背法令為理由，向高等法院提起上訴，增訂為第五項。八、前項案件既以高等法院為法律審，其所為判決自不得再上訴最高法院，爰增訂第六項。九、增訂第七項，明定戰時及二百零四條不適用第二項、第四項及第五項之規定；至本項所稱「戰時」，係指修正條文第七條所稱抵禦侵略而由總統依憲法宣告作戰之期間或戰爭或叛亂發生而宣告戒嚴之期間。
+> 釋：為落實基本人權之保障及國家刑罰權之行使，亦宜賦予軍事檢察官上訴第三審之權利，爰將第四項及第五項「被告」修正為「當事人」。
 
 * 182 上訴期間為十日，自送達判決後起算。但判決宣示後送達前之上訴，亦有效力。
 
@@ -822,9 +830,9 @@
 
 > 釋：一、條次變更，本條為原條文第二百十五條移列。二、本條情形屬職權覆判，爰配合第二百十條之修正，將「核准」修正為「駁回」，並將「覆判庭」修正為「最高軍事法院」，另將「呈請核定」等字予以刪除。三、「令准執行」，既屬檢察事務，爰修正為「送請國防部令准執行」，並分成兩項使條文的語意更臻明確。。
 
-* 206 上訴除本編規定外，準用第二編第三章審判之規定及刑事訴訟法關於上訴第二審之規定。戰時上訴案件除本編有特別規定外，準用刑事訴訟法關於上訴第三審之規定。
+* 206 上訴除本編另有規定外，準用第二編第三章審判之規定及刑事訴訟法關於上訴第二審之規定。但上訴最高法院或高等法院之案件，準用刑事訴訟法關於上訴第三審之規定。戰時上訴案件除本編有特別規定外，準用刑事訴訟法關於上訴第三審之規定。
 
-> 釋：一、條次變更，本條為原條文第二百十六條移列，並配合編章調整，作文字修正。二、本法修正後增訂有期徒刑以上之終審案件上訴最高法院或高等法院之規定，爰配合增訂準用刑事訴訟法關於上訴第三審之規定，列為第二項。
+> 釋：第一項原係規範平時第二審覆判及第三審上訴之訴訟程序之準據，惟於配合覆判改為上訴時所作文字修正，尚欠明確，致第三審上訴所應踐行之訴訟程序缺乏明文依據。但法理上於案件依據本法第一百八十一條規定提起上訴移審後，自應準用刑事訴訟法關於上訴第三審規定辦理，為期明確，爰增列但書規定，使上訴最高法院或高等法院之案件，得準用刑事訴訟法關於上訴第三審之規定，俾資適用。
 
 * 207 當事人及被告直屬長官，對軍事法院之裁定，除有特別規定外，得提起抗告。證人、鑑定人、通譯及其他非當事人受裁定者，亦得抗告。
 
@@ -938,6 +946,10 @@
 
 > 釋：一、條次變更，本條為原條文第二百四十九條移列，並作文字修正。二、第一項後段增訂得由軍事看守所代監執行之規定，以因應實際需要。三、增訂第二項，明定軍事審判保安處分之執行場所。
 
+* 234.1 軍事監獄之編裝、員額，由國防部定之。
+
+> 釋：一、本條新增。二、鑑於軍事監獄之設置目前並無法源依據，爰增訂之，以資適用。
+
 * 235 扣押物之應受發還人所在不明，或因其他事故不能發還者，戰時認為必要，得不經公告，逕行拍賣，保管其價金。
 
 > 釋：條次變更，本條為原條文第二百五十條移列，文字未修正。
@@ -950,9 +962,9 @@
 
 > 釋：一、本條新增。二、照黨團協商條文通過。
 
-* 238 本法自中華民國八十八年十月三日施行。
+* 238 本法自中華民國八十八年十月三日施行。本法修正條文自公布日施行。
 
-> 釋：條次變更，本條為原條文第二百五十二條移列，明訂修正本法之施行日期。
+> 釋：一、原條文未修正，列為第一項。二、增列第二項，有關本次修正條文施行日期之規定。
 
 * 239 有左列情形之一者，其判決當然為違背法令：一、軍事法庭之組織不合法者。二、依法律或裁判應迴避之審判官參與審判者。三、軍事審判機關所認管轄之有無係不當者。四、軍事審判機關受理案件或不受理案件係不當者。五、除有特別規定外，被告未於審判期日到庭而逕行審判者。六、依本法應用辯護人之案件，或已經指定辯護人之案件，辯護人未經到庭辯護而逕行審判者。七、除有特別規定外，未經軍事檢察官到庭陳述而為審判者。八、依本法應停止或更新審判而未經停止或更新者。九、依本法應於審判期日調查之證據未予調查者。十、未與被告以最後陳述之機會者。十一、除本法有特別規定外，已受請求之事項未予判決，或未受請求之事項予以判決者。十二、未經參與審理之審判官參與判決者。十三、判決不載理由或所載理由矛盾者。十四、判決理由對於被告有利之陳述或辯護意旨不予採納而未經記載者。
 
