中華民國刑法 2003.6.3

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -812,9 +812,9 @@
 
 * 322 以犯竊盜罪為常業者，處一年以上、七年以下有期徒刑。
 
-* 323 電能、熱能及其他能量或電磁紀錄，關於本章之罪，以動產論。
+* 323 電能、熱能及其他能量，關於本章之罪，以動產論。
 
-> 釋：一、關於「電氣」二字，現行立法例，例如電業法第二條、第四條、第九條第三款等，均用「電能」而不用「電氣」，爰配合修正之。二、增列「熱能及其他能量或電磁紀錄」關於本章之罪，以動產論之規定，以應需要。
+> 釋：本條係八十六年十月八日修正時，為規範部分電腦犯罪，增列電磁紀錄以動產論之規定，使電磁紀錄亦成為竊盜罪之行為客體。惟學界及實務界向認為：刑法上所稱之竊盜，須符合破壞他人持有、建立自己持有之要件，而電磁紀錄具有可複製性，此與電能、熱能或其他能量經使用後即消耗殆盡之特性不同；且行為人於建立自己持有時，未必會同時破壞他人對該電磁紀錄之持有。因此將電磁紀錄竊盜納入竊盜罪章規範，與刑法傳統之竊盜罪構成要件有所扞格。為因應電磁紀錄之可複製性，並期使電腦及網路犯罪規範體系更為完整，爰將本條有關電磁紀錄部分修正刪除，將竊取電磁紀錄之行為改納入新增之妨害電腦使用罪章中規範。
 
 * 324 於直系血親、配偶或同財共居親屬之間，犯本章之罪者，得免除其刑。前項親屬或其他五親等內血親或三親等內姻親之間，犯本章之罪者，須告訴乃論。
 
@@ -910,9 +910,9 @@
 
 * 351 於直系血親、配偶或同財共居親屬之間，犯本章之罪者，得免除其刑。
 
-* 352 毀棄、損壞他人文書或致令不堪用，足以生損害於公眾或他人者，處三年以下有期徒刑、拘役或一萬元以下罰金。干擾他人電磁紀錄之處理，足以生損害於公眾或他人者，亦同。
+* 352 毀棄、損壞他人文書或致令不堪用，足以生損害於公眾或他人者，處三年以下有期徒刑、拘役或一萬元以下罰金。
 
-> 釋：一、原條文修正為第一項，並修正罰金額。二、干擾他人電磁紀錄之處理，足以影響電腦正常之運作，足以生損害於公眾或他人時，宜以刑罰加以規範，爰增列第二項規定以應需要。
+> 釋：原條文第二項之「干擾」行為方式規定不夠明確，易生適用上之困擾，且本項行為之本質，與有形之毀損文書行為並不相同，為使電腦犯罪規範體系更為完整，爰將本項刪除，另增訂第三百六十條。
 
 * 353 毀壞他人建築物、礦坑、船艦或致令不堪用者，處六月以上、五年以下有期徒刑。因而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上、十年以下有期徒刑。第一項之未遂犯罰之。
 
@@ -923,4 +923,28 @@
 * 356 債務人於將受強制執行之際，意圖損害債權人之債權，而毀壞、處分或隱匿其財產者，處二年以下有期徒刑、拘役或五百元以下罰金。
 
 * 357 第三百五十二條、第三百五十四條至第三百五十六條之罪，須告訴乃論。
+
+* 358 無故輸入他人帳號密碼、破解使用電腦之保護措施或利用電腦系統之漏洞，而入侵他人之電腦或其相關設備者，處三年以下有期徒刑、拘役或科或併科十萬元以下罰金。
+
+> 釋：一、本條新增。二、鑒於對無故入侵他人電腦之行為採刑事處罰已是世界立法之趨勢，且電腦系統遭惡意入侵後，系統管理者須耗費大量之時間人力檢查，始能確保電腦系統之安全性，此種行為之危害性應已達科以刑事責任之程度，為保護電腦系統之安全性，爰增訂本條。
+
+* 359 無故取得、刪除或變更他人電腦或其相關設備之電磁紀錄，致生損害於公眾或他人者，處五年以下有期徒刑、拘役或科或併科二十萬元以下罰金。
+
+> 釋：一、本條新增。二、電腦已成為今日日常生活之重要工具，民眾對電腦之依賴性與日俱增，若電腦中之重要資訊遭到取得、刪除或變更，將導致電腦使用人之重大損害，鑒於世界先進國家立法例對於此種行為亦有處罰之規定，爰增訂本條。
+
+* 360 無故以電腦程式或其他電磁方式干擾他人電腦或其相關設備，致生損害於公眾或他人者，處三年以下有期徒刑、拘役或科或併科十萬元以下罰金。
+
+> 釋：一、本條新增。二、鑒於電腦及網路已成為人類生活之重要工具，分散式阻斷攻擊（DDOS）或封包洪流（Ping Flood）等行為已成為駭客最常用之癱瘓網路攻擊手法，故有必要以刑法保護電腦及網路設備之正常運作，爰增訂本條。又本條處罰之對象乃對電腦及網路設備產生重大影響之故意干擾行為，為避免某些對電腦系統僅產生極輕度影響之測試或運用行為亦被繩以本罪，故加上「致生損害於公眾或他人」之要件，以免刑罰範圍過於擴張。
+
+* 361 對於公務機關之電腦或其相關設備犯前三條之罪者，加重其刑至二分之一。
+
+> 釋：一、本條新增。二、由於公務機關之電腦系統如被入侵往往造成國家機密外洩，有危及國家安全之虞，因此對入侵公務機關電腦或其相關設備之犯行加重刑度，以適當保護公務機關之資訊安全，並與國際立法接軌。三、本條所稱公務機關，係指電腦處理個人資料保護法第三條所定之公務機關。
+
+* 362 製作專供犯本章之罪之電腦程式，而供自己或他人犯本章之罪，致生損害於公眾或他人者，處五年以下有期徒刑、拘役或科或併科二十萬元以下罰金。
+
+> 釋：一、本條新增。二、鑑於電腦病毒、木馬程式、電腦蠕蟲程式等惡意之電腦程式，對電腦系統安全性危害甚鉅，往往造成重大之財產損失，致生損害於公眾或他人，一九九九年四月二十六日發作之CIH病毒造成全球約有六千萬台電腦當機，鉅額損失難以估計，即為著名案例，因此實有對此類程式之設計者處罰之必要，爰增訂本條。
+
+* 363 第三百五十八條至第三百六十條之罪，須告訴乃論。
+
+> 釋：一、本條新增。二、刑罰並非萬能，即使將所有狹義電腦犯罪行為均規定為非告訴乃論，未必就能有效遏止電腦犯罪行為，尤其對於個人電腦之侵害行為，態樣不一，輕重有別，如受害人無告訴意願，並配合偵查，實際上亦難達到偵查成效，故採告訴乃論，有助於紛爭解決及疏解訟源，並可將國家有限之偵查及司法資源集中於較嚴重之電腦犯罪，有效從事偵查，爰增訂本條。三、至於第三百六十一條之罪，因公務機關之電腦系統往往與國家安全或社會重大利益密切關聯，實有加強保護之必要，故採非告訴乃論以嚇阻不法。第三百六十二條之罪則因該行為可能造成社會重大損失，惡性較第三百五十八條至第三百六十條之罪為重大，而個別被害人往往因證據已經滅失，或不願出庭作證，以致發生被害人數雖然眾多，但卻無被害人願意提出告訴之窘境（台灣CIH病毒案例即無被害人願意提出告訴），影響檢察官對此類犯行之追訴，故採非告訴乃論，以有效懲處不法。
 
