--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -1,10 +1,12 @@
 * 1 為保障著作人著作權益，調和社會公共利益，促進國家文化發展，特制定本法。本法未規定者，適用其他法律之規定。
 
-* 2 本法主管機關為經濟部。前項業務，由經濟部設專責機關辦理。
+* 2 本法主管機關為經濟部。著作權業務，由經濟部指定專責機關辦理。
 
-> 釋：「經濟部智慧財產局組織條例」第二條規定，有關著作權之相關業務為其職掌，經濟部智慧財產局業於八十八年一月二十六日成立，原內政部主管之著作權相關業務已移撥該局主政，爰參考專利法第三條修正之。
+> 釋：第二項酌作修正，本項所稱「前項業務」應指「著作權業務」，其業務於八十八年一月二十六日即已由經濟部指定智慧財產局辦理，爰予修正。
 
-* 3 本法用詞定義如下：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。但家庭及其正常社交之多數人，不在此限。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法有形之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作用容。七、公開播送：指基於公眾接收訊息為目的，以有線電、無線電或其他器材，藉聲音或影像向公眾傳達著作內容。由原播送人以外之人，以有線電或無線電將原播送之聲音或影像向公眾傳達者，亦屬之。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法於同一時間向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。以擴音器或其他器材，將原播送之聲音或影像向公眾傳達者，亦屬之。十、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十一、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十二、發行：指權利人散布能滿足公眾合理需要之重製物。十三、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。十四、原件：指著作首次附著之物。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
+* 3 本法用詞定義如下：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。但家庭及其正常社交之多數人，不在此限。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法直接、間接、永久或暫時之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作內容。七、公開播送：指基於公眾直接收聽或收視為目的，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，藉聲音或影像，向公眾傳達著作內容。由原播送人以外之人，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，將原播送之聲音或影像向公眾傳達者，亦屬之。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法於同一時間向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。以擴音器或其他器材，將原播送之聲音或影像向公眾傳達者，亦屬之。十、公開傳輸：指以有線電、無線電之網路或其他通訊方法，藉聲音或影像向公眾提供或傳達著作內容，包括使公眾得於其各自選定之時間或地點，以上述方法接收著作內容。十一、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十二、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十三、公開展示：指向公眾展示著作內容。十四、發行：指權利人散布能滿足公眾合理需要之重製物。十五、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。十六、原件：指著作首次附著之物。十七、權利管理電子資訊：指於著作原件或其重製物，或於著作向公眾傳達時，所表示足以確認著作、著作名稱、著作人、著作財產權人或其授權之人及利用期間或條件之相關電子資訊；以數字、符號表示此類資訊者，亦屬之。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
+
+> 釋：照黨團協商條文通過。
 
 * 4 外國人之著作合於下列情形之一者，得依本法享有著作權。但條約或協定另有約定，經立法院議決通過者，從其約定：一、於中華民國管轄區域內首次發行，或於中華民國管轄區域外首次發行後三十日內在中華民國管轄區域內發行者。但以該外國人之本國，對中華民國人之著作，在相同之情形下，亦予保護且經查證屬實者為限。二、依條約、協定或其本國法令、慣例，中華民國人之著作得在該國享有著作權者。
 
@@ -14,7 +16,9 @@
 
 * 7 就資料之選擇及編排具有創作性者為編緝著作，以獨立之著作保護之。編輯著作之保護，對其所收編著作之著作權不生影響。
 
-* 7.1 表演人對既有著作之表演，以獨立之著作保護之。表演之保護，對原著作之著作權不生影響。
+* 7.1 表演人對既有著作或民俗創作之表演，以獨立之著作保護之。表演之保護，對原著作之著作權不生影響。
+
+> 釋：第一項酌作修正。按WPPT第二條第（ａ）款關於表演人權利之保護，包括「民俗創作」之表演，爰參考配合增訂之。
 
 * 8 二人以上共同完成之著作，其各人之創作，不能分離利用者，為共同著作。
 
@@ -46,21 +50,37 @@
 
 * 21 著作人格權專屬於著作人本身，不得讓與或繼承。
 
-* 22 著作人除本法另有規定外，專有重製其著作之權利。著作人專有以錄音、錄影或攝影重製其表演之權利。
+* 22 著作人除本法另有規定外，專有重製其著作之權利。表演人專有以錄音、錄影或攝影重製其表演之權利。前二項規定，於專為網路中繼性傳輸，或使用合法著作，屬技術操作過程中必要之過渡性、附帶性而不具獨立經濟意義之暫時性重製，不適用之。但電腦程式不在此限。前項網路中繼性傳輸之暫時性重製情形，包括網路瀏覽、快速存取或其他為達成傳輸功能之電腦或機械本身技術上所不可避免之現象。
+
+> 釋：照黨團協商條文通過。
 
 * 23 著作人專有公開口述其語文著作之權利。
 
-* 24 著作人專有公開播送其著作之權利。但將表演重製或公開播送後再公開播送者，不在此限。
+* 24 著作人除本法另有規定外，專有公開播送其著作之權利。表演人就其經重製或公開播送後之表演，再公開播送者，不適用前項規定。
+
+> 釋：一、原條文酌作修正後列為第一項。二、原條文但書規定移列第二項。按表演人之公開播送權較其他著作類別狹隘，現行條文但書原即係僅針對表演人而作規定，不及於其他著作類別，爰於第二項比照修正條文第二十二條第二項，修正後採用「表演人」之用語，使文義更為明確。亦即除表演人之公開播送權有限縮規定外，其他各類著作，包括錄有表演之錄音著作或視聽著作，其著作人均有完整之公開播送權。
 
 * 25 著作人專有公開上映其視聽著作之權利。
 
-* 26 著作人除本法另有規定外，專有公開演出其語文、音樂或戲劇、舞蹈著作之權利。著作人專有以擴音器或其他器材公開演出其表演之權利。但將表演重製或公開播送後再以擴音器或其他器材公開演出者，不在此限。
+* 26 著作人除本法另有規定外，專有公開演出其語文、音樂或戲劇、舞蹈著作之權利。表演人專有以擴音器或其他器材公開演出其表演之權利。但將表演重製後或公開播送後再以擴音器或其他器材公開演出者，不在此限。錄音著作經公開演出者，著作人得請求公開演出之人支付使用報酬。前項錄音著作如有重製表演之情形者，由錄音著作之著作人及表演人共同請求支付使用報酬。其由一方先行請求者，應將使用報酬分配予他方。
+
+> 釋：照黨團協商條文通過。
+
+* 26.1 著作人除本法另有規定外，專有公開傳輸其著作之權利。表演人就其經重製於錄音著作之表演，專有公開傳輸之權利。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
 * 27 著作人專有公開展示其未發行之美術著作或攝影著作之權利。
 
 * 28 著作人專有將其著作改作成衍生著作或編輯成編輯著作之權利。但表演不適用之。
 
-* 29 著作人專有出租其著作之權利。但表演不適用之。
+* 28.1 著作人除本法另有規定外，專有以移轉所有權之方式，散布其著作之權利。表演人就其經重製於錄音著作之表演，專有以移轉所有權之方式散布之權利。
+
+> 釋：一、本條新增。二、參照WCT第六條、WPPT第八條及第十二條規定，增訂散布權。三、針對表演之特殊性，爰於第二項為特別規定。
+
+* 29 著作人除本法另有規定外，專有出租其著作之權利。表演人就其經重製於錄音著作之表演，專有出租之權利。
+
+> 釋：一、原條文修正後列為第一項。二、第二項新增。按WPPT第九條、第十三條規定，固著於錄音物之表演及錄音物，其表演人及錄音物製作人應賦予出租權。爰於第二項依上述國際公約增訂之。
 
 * 29.1 依第十一條第二項或第十二條第二項規定取得著作財產權之雇用人或出資人，專有第二十二條至第二十九條規定之權利。
 
@@ -80,9 +100,9 @@
 
 * 36 著作財產權得全部或部分讓與他人或與他人共有。著作財產權之受讓人，在其受讓範圍內，取得著作財產權。著作財產權讓與之範圍依當事人之約定；其約定不明之部分，推定為未讓與。
 
-* 37 著作財產權人得授權他人利用著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項授權經公證人作成公證書者，不因著作財產權人嗣後將其著作財產權讓與或再為授權而受影響。非專屬授權之被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利。著作財產權人在專屬授權範圍內，不得行使權利。第二項至第四項規定，於本法修正施行前所為之授權，不適用之。音樂著作經授權重製於電腦伴唱機者，利用人利用該電腦伴唱機公開演出該著作，不適用第七章規定。但屬於著作權仲介團體管理之音樂著作，不在此限。
+* 37 著作財產權人得授權他人利用著作，其授權利用之地域、時間、內容、利用方法或其他事項，依當事人之約定；其約定不明之部分，推定為未授權。前項授權不因著作財產權人嗣後將其著作財產權讓與或再為授權而受影響。非專屬授權之被授權人非經著作財產權人同意，不得將其被授與之權利再授權第三人利用。專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利，並得以自己名義為訴訟上之行為。著作財產權人在專屬授權範圍內，不得行使權利。第二項至前項規定，於中華民國九十年十一月十二日本法修正施行前所為之授權，不適用之。音樂著作經授權重製於電腦伴唱機者，利用人利用該電腦伴唱機公開演出該著作，不適用第七章規定。但屬於著作權仲介團體管理之音樂著作，不在此限。
 
-> 釋：一、為避免著作財產權人於授權後因該著作財產權讓與或再為授權致影響先前之授權，增訂第二項。原第二項移列為第三項。二、增訂第四項，明定專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利，而著作財產權人在該範圍內，不得行使權利，以資明確。三、增訂第五項、第六項。
+> 釋：一、第二項修正。按九十年十一月十二日修正公布之本法規定，授權「經公證人作成公證書」，不因著作財產權人嗣後將其著作財產權讓與或再為授權而受影響，此一規定易產生「如授權未經公證人作成公證書，將因嗣後著作財產權人將其著作財產權讓與或再為授權而受影響」之解讀，為免引起有違伯恩公約第五條第二項所定「著作權之享有與行使不得要求履行一定形式要件」之爭議，爰予刪除。二、第四項修正。原條文規定，專屬授權之被授權人在被授權範圍內，得以著作財產權人之地位行使權利，惟其得否以自己名義為訴訟上之行為，並不明確，滋生爭議，爰予修正明定。三、第五項酌作修正。按第二項至第四項係於中華民國九十年十一月十二日修正增訂，原條文第五項所稱「本法修正施行前」，應配合修正為「於中華民國九十年十一月十二日本法修正施行前」。
 
 * 38 （刪除）
 
@@ -110,9 +130,13 @@
 
 * 48.1 中央或地方機關、依法設立之教育機構或供公眾使用之圖書館，得重製下列已公開發表之著作所附之摘要：一、依學位授予法撰寫之碩士、博士論文，著作人已取得學位者。二、刊載於期刊中之學術論文。三、已公開發表之研討會論文集或研究報告。
 
-* 49 以廣播、攝影、錄影、新聞紙或其他方法為時事報導者，在報導之必要範圍內，得利用其報導過程中所接觸之著作。
+* 49 以廣播、攝影、錄影、新聞紙、網路或其他方法為時事報導者，在報導之必要範圍內，得利用其報導過程中所接觸之著作。
 
-* 50 以中央或地方機關或公法人名義公開發表之著作，在合理範圍內，得重製或公開播送。
+> 釋：按為時事報導者，其方法除廣播、攝影、錄影、新聞紙外，尚包括網路之管道，爰予增列。
+
+* 50 以中央或地方機關或公法人之名義公開發表之著作，在合理範圍內，得重製、公開播送或公開傳輸。
+
+> 釋：本條之立法意旨在便利民眾合理利用政府出版品，促進公益，鑒於網路時代「公開傳輸」之利用型態，亦相當普遍，爰配合修正條文第二十六條之一「公開傳輸權」之增訂，修正本條，允許以「公開傳輸」之方式利用政府出版品。
 
 * 50.1 著作已完成註冊於中華民國七十四年七月十日本法修正施行前，其著作權期間仍在存續中者，依本法所定期間計算其著作權期間。完成於中華民國七十四年七月十日本法修正施行前未經註冊取得著作權之著作，其發行未滿二十年者，於中華民國七十四年七月十日本法修正施行後適用本法之規定。但侵害行為之賠償及處罰，須該行為發生於本法修正施行後，始適用本法。中華民國七十四年七月十日本法修正增訂之著作，依中華民國七十四年七月十日本法修正所定期間，其著作權仍在存續中者，適用本法規定。但侵害行為之賠償及處罰，須該行為發生於本法增訂該著作後，始適用本法。
 
@@ -122,15 +146,21 @@
 
 * 52 為報導、評論、教學、研究或其他正當目的之必要，在合理範圍內，得引用已公開發表之著作。
 
-* 53 已公開發表之著作，得為盲人以點字重製之。以增進盲人福利為目的，經主管機關許可之機構或團體，得以錄音、電腦或其他方式利用已公開發表之著作，專供盲人使用。
+* 53 已公開發表之著作，得為視覺障礙者、聽覺機能障礙者以點字、附加手語翻譯或文字重製之。以增進視覺障礙者、聽覺機能障礙者福利為目的，經依法立案之非營利機構或團體，得以錄音、電腦、口述影像、附加手語翻譯或其他方式利用已公開發表之著作，專供視覺障礙者、聽覺機能障礙者使用。
+
+> 釋：一、修正第一項。原條文關於有利於身體障礙者之合理使用，僅限於為利於視覺障礙者之利用，並不包括聽覺機能障礙者，爰增列得以附加手語翻譯或文字重製之；另依「身心障礙者保護法」之用詞，將原條文「盲人」修正為「視覺障礙者」。二、修正第二項，擴大適用範圍。原條文第二項所稱「主管機關」原係指負責視覺障礙者福利之社會福利主管機關，並非本法之主管機關。又本條之立法意旨在為障礙者福利之目的下，提供合理使用之空間，其利用主體不必以經社會福利主管機關許可之機構或團體為限，祇要依法立案之非營利性質者即為適當，爰予修正。
 
 * 54 中央或地方機關、依法設立之各級學校或教育機構辦理之各種考試，得重製已公開發表之著作，供為試題之用。但已公開發表之著作如為試題者，不適用之。
 
 * 55 非以營利為目的，未對觀眾或聽眾直接或間接收取任何費用，且未對表演人支付報酬者，得於活動中公開口述、公開播送、公開上映或公開演出他人已公開發表之著作。
 
-* 56 廣播或電視，為播送之目的，得以自己之設備錄音或錄影該著作。但以其播送業經著作財產權人之授權或合於本法規定者為限。前項錄製物除經主管機關核准保存於指定之處所外，應於錄音或錄影後一年內銷燬之。
+* 56 廣播或電視，為公開播送之目的，得以自己之設備錄音或錄影該著作。但以其公開播送業經著作財產權人之授權或合於本法規定者為限。前項錄製物除經著作權專責機關核准保存於指定之處所外，應於錄音或錄影後六個月內銷燬之。
 
-* 56.1 為加強收視效能，得以依法令設立之社區共同天線同時轉播依法設立無線電視臺播送之著作，不得變更其形式或內容。有線電視之系統經營者得提供基本頻道，同時轉播依法設立無線電視臺播送之著作，不得變更其形式或內容。
+> 釋：一、第一項酌作文字修正。二、第二項修正。依修正條文第二條規定，本法主管機關為經濟部，並由經濟部指定專責機關辦理著作權相關業務，原條文內「主管機關」文字之真意為「著作權專責機關」，爰予修正。三、又本條第一項所為之錄製物，依原條文第二項規定應於錄音或錄影後一年內銷燬之，按國際立法例對此錄製物之保存時間，有定為一個月者，如德國著作權法第五十五條第一項，有定為六個月者，如日本著作權法第四十四條第三項規定，均較現行法所定之一年期間為短，爰衡酌各該立法例，縮短為六個月。
+
+* 56.1 為加強收視效能，得以依法令設立之社區共同天線同時轉播依法設立無線電視臺播送之著作，不得變更其形式或內容。
+
+> 釋：第二項刪除。為解決地形所造成傳訊、收訊障礙所設之「有線電視強制播送無線電視節目」規定，確屬實務上之作法。惟是否課以有線電視必載無線電視節目之義務，係屬廣播電視主管機關之政策，如有利用著作之合理使用問題，宜於廣播電視相關法規內予以規範，使之成為本法之特別法予以適用，不宜在本法中為一般性之規範，爰予刪除。
 
 * 57 美術著作或攝影著作原件或合法重製物之所有人或經其同意之人，得公開展示該著作原件或合法重製物。前項公開展示之人，為向參觀人解說著作，得於說明書內重製該著作。
 
@@ -138,17 +168,29 @@
 
 * 59 合法電腦程式著作重製物之所有人得因配合其所使用機器之需要，修改其程式，或因備用存檔之需要重製其程式。但限於該所有人自行使用。前項所有人因滅失以外之事由，喪失原重製物之所有權者，除經著作財產權人同意外，應將其修改或重製之程式銷燬之。
 
-* 60 合法著作重製物之所有人，得出租該重製物。但錄音及電腦程式著作之重製物，不適用之。附含於貨物、機器或設備之電腦程式著作重製物，隨同貨物、機器或設備合法出租且非該項出租之主要標的物者，不適用前項但書之規定。
+* 59.1 在中華民國管轄區域內取得著作原件或其合法重製物所有權之人，得以移轉所有權之方式散布之。
 
-* 61 揭載於新聞紙、雜誌有關政治、經濟或社會上時事問題之論述，得由其他新聞紙、雜誌轉載或由廣播或電視公開播送。但經註明不許轉載或公開播送者，不在此限。
+> 釋：一、本條新增。二、按修正條文第二十八條之一已增訂散布權，爰依照規定給予各國之彈性，納入權利耗盡原則（或稱「第一次銷售原則」），以調和著作財產權人之散布權與著作物所有人物權間之關係。三、散布權耗盡原則之適用，以物權之所有人自中華民國管轄區域內取得著作原件或其合法重製物為要件。又散布權一經耗盡後權利人即喪失其散布權，從而對其後自原件或重製物所有人再繼受取得所有權之人，亦不得再主張散布權。
+
+* 60 著作原件或其合法著作重製物之所有人，得出租該原件或重製物。但錄音及電腦程式著作，不適用之。附含於貨物、機器或設備之電腦程式著作重製物，隨同貨物、機器或設備合法出租且非該項出租之主要標的物者，不適用前項但書之規定。
+
+> 釋：第一項酌作修正。將著作原件增列為得為出租之標的物，使實務上之適用更為明確，避免爭議。
+
+* 61 揭載於新聞紙、雜誌或網路上有關政治、經濟或社會上時事問題之論述，得由其他新聞紙、雜誌轉載或由廣播或電視公開播送，或於網路上公開傳輸。但經註明不許轉載、公開播送或公開傳輸者，不在此限。
+
+> 釋：照黨團協商條文通過。
 
 * 62 政治或宗教上之公開演說、裁判程序及中央或地方機關之公開陳述，任何人得利用之。但專就特定人之演說或陳述，編輯成編輯著作者，應經著作財產權人之同意。
 
-* 63 依第四十四條、第四十五條、第四十八條第一款、第四十八條之一至第五十條、第五十二條至第五十五條、第六十一條及第六十二條規定得利用他人著作者，得翻譯該著作。依第四十六條及第五十一條規定得利用他人著作者，得改作該著作。
+* 63 依第四十四條、第四十五條、第四十八條第一款、第四十八條之一至第五十條、第五十二條至第五十五條、第六十一條及第六十二條規定得利用他人著作者，得翻譯該著作。依第四十六條及第五十一條規定得利用他人著作者，得改作該著作。依第四十六條至第五十條、第五十二條至第五十四條、第五十七條第二項、第五十八條、第六十一條及第六十二條規定利用他人著作者，得散布該著作。
+
+> 釋：增訂第三項。配合修正條文第二十八條之一增訂著作人享有散布權之規定，增訂合理使用條文，使在特定情形之合理使用著作時，亦得散布該著作；本項合理使用之散布，應配合各該條文所允許合理使用之重製行為。
 
 * 64 依第四十四條至第四十七條、第四十八條之一至第五十條、第五十二條、第五十三條、第五十五條、第五十七條、第五十八條、第六十條至第六十三條規定利用他人著作者，應明示其出處。前項明示出處，就著作人之姓名或名稱，除不具名著作或著作人不明者外，應以合理之方式為之。
 
-* 65 著作之合理使用，不構成著作財產權之侵害。著作之利用是否合於第四十四條至第六十三條規定或其他合理使用之情形，應審酌一切情狀，尤應注意下列事項，以為判斷之標準：一、利用之目的及性質，包括係為商業目的或非營利教育目的。二、著作之性質。三、所利用之質量及其在整個著作所占之比例。四、利用結果對著作潛在市場與現在價值之影響。
+* 65 著作之合理使用，不構成著作財產權之侵害。著作之利用是否合於第四十四條至第六十三條規定或其他合理使用之情形，應審酌一切情狀，尤應注意下列事項，以為判斷之基準：一、利用之目的及性質，包括係為商業目的或非營利教育目的。二、著作之性質。三、所利用之質量及其在整個著作所占之比例。四、利用結果對著作潛在市場與現在價值之影響。著作權人團體與利用人團體就著作之合理使用範圍達成協議者，得為前項判斷之參考。前項協議過程中，得諮詢著作權專責機關之意見。
+
+> 釋：一、第二項酌作修正。原條文第二項所稱「判斷之『標準』」，並非法規，與中央法規標準法第三條所定「標準」，用語相同，易生混淆，爰修正為「基準」，以資區別。二、第三項新增。著作權利人團體與利用人團體就著作之合理使用範圍達成「君子約定之協議」之作法，其雖未必全然為司法機關所接受，惟實務上確可使利用人有所依循而避免爭議，爰予增訂。三、第四項新增。按於第三項協議之過程中，各方意見如有差距，通常期待著作權專責機關提供專業意見，以協助達成共識，爰予增訂。
 
 * 66 第四十四條至第六十三條及第六十五條規定，對著作人之著作人格權不生影響。
 
@@ -156,7 +198,9 @@
 
 * 68 （刪除）
 
-* 69 錄有音樂著作之銷售用錄音著作發行滿六個月，欲利用該音樂著作錄製其他銷售用錄音著作者，經申請主管機關許可強制授權，並給付使用報酬後，得利用該音樂著作，另行錄製。前項申請許可強制授權及使用報酬之辦法，由主管機關定之。
+* 69 錄有音樂著作之銷售用錄音著作發行滿六個月，欲利用該音樂著作錄製其他銷售用錄音著作者，經申請著作權專責機關許可強制授權，並給付使用報酬後，得利用該音樂著作，另行錄製。前項音樂著作強制授權許可、使用報酬之計算方式及其他應遵行事項之辦法，由主管機關定之。
+
+> 釋：一、第一項酌作文字修正。配合修正條文第二條規定，將原條文第一項之「主管機關」修正為「著作權專責機關」。二、第二項酌作文字修正。
 
 * 70 依前條規定利用音樂著作者，不得將其錄音著作之重製物銷售至中華民國管轄區域外。
 
@@ -178,17 +222,39 @@
 
 * 78 （刪除）
 
-* 79 無著作財產權或著作財產權消滅之文字著述或美術著作，經製版人就文字著述整理印刷，或就美術著作原件以影印、印刷或類似方式重製首次發行，並依法登記者，製版人就其版面，專有以影印、印刷或類似方式重製之權利。製版人之權利，自製版完成時起算存續十年。前項保護期間，以該期間屆滿當年之末日，為期間之終止。第一項登記之辦法，由主管機關定之。
+* 79 無著作財產權或著作財產權消滅之文字著述或美術著作，經製版人就文字著述整理印刷，或就美術著作原件以影印、印刷或類似方式重製首次發行，並依法登記者，製版人就其版面，專有以影印、印刷或類似方式重製之權利。製版人之權利，自製版完成時起算存續十年。前項保護期間，以該期間屆滿當年之末日，為期間之終止。製版權之讓與或信託，非經登記，不得對抗第三人。製版權登記、讓與登記、信託登記及其他應遵行事項之辦法，由主管機關定之。
+
+> 釋：一、第四項新增。按信託法第四條第一項規定「以應登記或註冊之財產權為信託者，非經信託登記，不得對抗第三人。」製版權應屬該項所定之範疇，爰配合信託法之規定，增訂製版權信託登記之相關規定。至於業經登記已獲得製版權之讓與，雖非以登記為要件，亦可善用登記公示制度。二、原條文第四項酌為文字修正，移列為第五項。
 
 * 80 第四十二條及第四十三條有關著作財產權消滅之規定、第四十四條至第四十八條、第四十九條、第五十一條、第五十二條、第五十四條、第六十四條及第六十五條關於著作財產權限制之規定，於製版權準用之。
+
+* 80.1 著作權人所為之權利管理電子資訊，不得移除或變更。但有下列情形之一者，不在此限：一、因行為時之技術限制，非移除或變更著作權利管理電子資訊即不能合法利用該著作。二、錄製或傳輸系統轉換時，其轉換技術上必要之移除或變更。明知著作權利管理電子資訊，業經非法移除或變更者，不得散布或意圖散布而輸入或持有該著作原件或其重製物，亦不得公開播送、公開演出或公開傳輸。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
 * 81 著作財產權人為行使權利、收受及分配使用報酬，經著作權專責機關之許可，得組成著作權仲介團體。專屬授權之被授權人，亦得加入著作權仲介團體。第一項團體之許可設立、組織、職權及其監督、輔導，另以法律定之。
 
 > 釋：一、將第一項「主管機關」，修正為「著作權專責機關」。二、增訂第二項，專屬授權之被授權人，亦得加入著作權仲介團體。三、原條文第二項，移列為第三項。
 
-* 82 著作權專責機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定使用報酬率之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者，以告訴乃論之案件為限。
+* 82 著作權專責機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定使用報酬率之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第二款之調解不成立時，應依法仲裁。第一項第三款所定爭議之調解，其涉及刑事者以告訴乃論罪之案件為限。
 
-> 釋：按著作權既屬私權，回歸民法私法自治及市場機能之精神，藉由仲介團體與利用人雙方自由協商洽談，實屬需要，為避免不必要之誤解，爰刪除使用報酬率應經著作權審議及調解委員會審議之規定。
+> 釋：照黨團協商條文通過。
+
+* 82.1 著作權專責機關應於調解成立後七日內，將調解書送請管轄法院審核。前項調解書，法院應儘速審核，除有違反法令、公序良俗或不能強制執行者外，應由法官簽名並蓋法院印信，除抽存一份外，發還著作權專責機關送達當事人。法院未予核定之事件，應將其理由通知著作權專責機關。
+
+> 釋：一、本條新增。二、第一項規定著作權專責機關調解成立後，應於七日內將調解書送請管轄法院審核。三、第二項規定法院就與法令、公共秩序、善良風俗無牴觸及非不能強制執行之調解書之審核。四、第三項規定法院就調解內容未予核定時之處理。
+
+* 82.2 調解經法院核定後，當事人就該事件不得再行起訴、告訴或自訴。前項經法院核定之民事調解，與民事確定判決有同一之效力；經法院核定之刑事調解，以給付金錢或其他代替物或有價證券之一定數量為標的者，其調解書具有執行名義。
+
+> 釋：一、本條新增。二、按著作權爭議案件具高度專業性，主管機關之著作權審議及調解委員會委員均為專業人員所組成，其調解除可免除雙方當事人訴訟程序之勞費，並可紓減司法機關案件負荷，現行條文第八十二條第一項第二款及第三款雖亦有調解之規定，惟以其僅具有民法上和解之效果，故無法獲得重視，徒增各方訟累，爰參考鄉鎮市調解條例第二十四條，於第一項規定，調解經法院核定後，當事人就該事件不得再行起訴、告訴或自訴，並於第二項規定經法院核定之調解與確定判決有同一之效力，其調解書並具有執行名義。
+
+* 82.3 民事事件已繫屬於法院，在判決確定前，調解成立，並經法院核定者，視為於調解成立時撤回起訴。刑事事件於偵查中或第一審法院辯論終結前，調解成立，經法院核定，並經當事人同意撤回者，視為於調解成立時撤回告訴或自訴。
+
+> 釋：一、本條新增。二、第一項規定民事訴訟判決確定前，經法院核定之調解，具有視為於調解成立時撤回起訴之效力。三、第二項規定刑事事件於偵查中或第一審法院辯論終結前，經法院核定之調解，具有視為於調解成立時撤回告訴或自訴之效力。
+
+* 82.4 民事調解經法院核定後，有無效或得撤銷之原因者，當事人得向原核定法院提起宣告調解無效或撤銷調解之訴。前項訴訟，當事人應於法院核定之調解書送達後三十日內提起之。
+
+> 釋：一、本條新增。二、第一項規定經法院核定之民事調解有無效或得撤銷之原因之處理。三、第二項規定提起宣告調解無效或撤銷調解之訴之期間。
 
 * 83 前條著作權審議及調解委員會之組織規程及有關爭議之調解辦法，由主管機關擬訂，報請行政院核定後發布之。
 
@@ -198,11 +264,15 @@
 
 * 86 著作人死亡後，除其遺囑另有指定外，下列之人，依順序對於違反第十八條或有違反之虞者，得依第八十四條及前條第二項規定，請求救濟：一、配偶。二、子女。三、父母。四、孫子女。五、兄弟姊妹。六、祖父母。
 
-* 87 有下列情形之一者，除本法另有規定外，視為侵害著作權或製版權：一、以侵害著作人名譽之方法利用其著作者。二、明知為侵害著作權或製版權之物而散布或意圖散布而陳列或持有或意圖營利而交付者。三、輸入未經著作財產權人或製版權人授權重製之重製物或製版物者。四、未經著作財產權人同意而輸入著作原件或其重製物者。五、明知係侵害電腦程式著作財產權之重製物而仍作為直接營利之使用者。
+* 87 有下列情形之一者，除本法另有規定外，視為侵害著作權或製版權：一、（刪除）二、明知為侵害製版權之物而散布或意圖散布而公開陳列或持有者。三、輸入未經著作財產權人或製版權人授權重製之重製物或製版物者。四、未經著作財產權人同意而輸入著作原件或其重製物者。五、明知係侵害電腦程式著作財產權之重製物而作為營業之使用者。六、明知為侵害著作財產權之物而以移轉所有權或出租以外之方式散布者，或明知為侵害著作財產權之物意圖散布而公開陳列或持有者。
+
+> 釋：照黨團協商條文通過。
 
 * 87.1 有下列情形之一者，前條第四款之規定，不適用之：一、為供中央或地方機關之利用而輸入。但為供學校或其他教育機構之利用而輸入或非以保存資料之目的而輸入視聽著作原件或其重製物者，不在此限。二、為供非營利之學術、教育或宗教機構保存資料之目的而輸入視聽著作原件或一定數量重製物，或為其圖書館借閱或保存資料之目的而輸入視聽著作以外之其他著作原件或一定數量重製物，並應依第四十八條規定利用之。三、為供輸入者個人非散布之利用或屬入境人員行李之一部分而輸入著作原件或一定數量重製物者。四、附含於貨物、機器或設備之著作原件或其重製物，隨同貨物、機器或設備之合法輸入而輸入者，該著作原件或其重製物於使用或操作貨物、機器或設備時不得重製。五、附屬於貨物、機器或設備之說明書或操作手冊，隨同貨物、機器或設備之合法輸入而輸入者。但以說明書或操作手冊為主要輸入者，不在此限。前項第二款及第三款之一定數量，由主管機關另定之。
 
-* 88 因故意或過失不法侵害他人之著作財產權或製版權者，負損害賠償責任。數人共同不法侵害者，連帶負賠償責任。前項損害賠償，被害人得依下列規定擇一請求：一、依民法第二百十六條之規定請求。但被害人不能證明其損害時，得以其行使權利依通常情形可得預期之利益，減除被侵害後行使同一權利所得利益之差額，為其所受損害。二、請求侵害人因侵害行為所得之利益。但侵害人不能證明其成本或必要費用時，以其侵害行為所得之全部收入，為其所得利益。依前項規定，如被害人不易證明其實際損害額，得請求法院依侵害情節，在新臺幣一萬元以上五十萬元以下酌定賠償額。如損害行為屬故意且情節重大者，賠償額得增至新臺幣一百萬元。
+* 88 因故意或過失不法侵害他人之著作財產權或製版權者，負損害賠償責任。數人共同不法侵害者，連帶負賠償責任。前項損害賠償，被害人得依下列規定擇一請求：一、依民法第二百十六條之規定請求。但被害人不能證明其損害時，得以其行使權利依通常情形可得預期之利益，減除被侵害後行使同一權利所得利益之差額，為其所受損害。二、請求侵害人因侵害行為所得之利益。但侵害人不能證明其成本或必要費用時，以其侵害行為所得之全部收入，為其所得利益。依前項規定，如被害人不易證明其實際損害額，得請求法院依侵害情節，在新臺幣一萬元以上一百萬元以下酌定賠償額。如損害行為屬故意且情節重大者，賠償額得增至新臺幣五百萬元。
+
+> 釋：第三項酌作修正。依TRIPS第四十一條至四十三條規定，為確保對侵害智慧財產權之行為得有效防止及遏止更進一步之侵害，爰提高法院依侵害情節酌定賠償額之上限，一般侵害為新臺幣一百萬元，其屬故意且情節重大者，得增至五百萬元。
 
 * 88.1 依第八十四條或前條第一項請求時，對於侵害行為作成之物或主要供侵害所用之物，得請求銷燬或為其他必要之處置。
 
@@ -218,43 +288,89 @@
 
 * 90.2 前條之實施辦法，由主管機關會同財政部定之。
 
-* 91 擅自以重製之方法侵害他人之著作財產權者，處六月以上三年以下有期徒刑，得併科新臺幣二十萬元以下罰金。意圖銷售或出租而擅自以重製之方法侵害他人之著作財產權者，處六月以上五年以下有期徒刑，得併科新臺幣三十萬元以下罰金。
+* 90.3 違反第八十條之一規定，致著作權人受損害者，負賠償責任。數人共同違反者，負連帶賠償責任。第八十四條、第八十八條之一、第八十九條之一及第九十條之一規定，於違反第八十條之一規定者，準用之。
 
-* 92 擅自以公開口述、公開播送、公開上映、公開演出、公開展示、改作、編輯或出租之方法侵害他人之著作財產權者，處三年以下有期徒刑，得併科新臺幣十五萬元以下罰金。
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
-* 93 有下列情形之一者，處二年以下有期徒刑，得併科新臺幣十萬元以下罰金：一、侵害第十五條至第十七條規定之著作人格權者。二、違反第七十條規定者。三、以第八十七條各款方法之一侵害他人之著作權者。
+* 91 意圖營利而以重製之方法侵害他人之著作財產權者，處五年以下有期徒刑、拘役，或併科新臺幣二十萬元以上二百萬元以下罰金。非意圖營利而以重製之方法侵害他人之著作財產權，重製份數超過五份，或其侵害總額按查獲時獲得合法著作重製物市價計算，超過新臺幣三萬元者，處三年以下有期徒刑、拘役或科或併科新臺幣七十五萬元以下罰金。以重製於光碟之方法犯第一項之罪者，處五年以下有期徒刑、拘役，或併科新臺幣五十萬元以上五百萬元以下罰金。
 
-* 94 以犯第九十一條、第九十二條或第九十三條之罪為常業者，處一年以上七年以下有期徒刑，得併科新臺幣四十五萬元以下罰金。
+> 釋：照黨團協商條文通過。
 
-* 95 有下列情形之一者，處一年以下有期徒刑，得併科新臺幣五萬元以下罰金：一、違反第十八條規定者。二、侵害第七十九條規定之製版權者。三、以第八十七條各款方法之一侵害他人製版權者。四、違反第一百十二條規定者。
+* 91.1 意圖營利而以移轉所有權之方法散布著作原件或其重製物而侵害他人之著作財產權者，處三年以下有期徒刑、拘役或科或併科新臺幣七十五萬元以下罰金。非意圖營利而以移轉所有權之方法散布著作原件或其重製物，或意圖散布而公開陳列或持有而侵害他人之著作財產權者，散布份數超過五份，或其侵害總額按查獲時獲得合法著作重製物市價計算，超過新臺幣三萬元者，處二年以下有期徒刑、拘役，或科或併科新臺幣五十萬元以下罰金。犯第一項之罪，其重製物為光碟者，處三年以下有期徒刑、拘役，或併科新臺幣一百五十萬元以下罰金。犯前項之罪，經供出其物品來源，因而破獲者，得減輕其刑。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
+
+* 92 意圖營利而以公開口述、公開播送、公開上映、公開演出、公開傳輸、公開展示、改作、編輯或出租之方法侵害他人著作財產權者，處三年以下有期徒刑、拘役，或併科新臺幣七十五萬元以下罰金。非意圖營利而犯前項之罪，其所侵害之著作超過五件，或權利人所受損害超過新臺幣三萬元者，處二年以下有期徒刑、拘役，或科或併科新臺幣五十萬元以下罰金。
+
+> 釋：照黨團協商條文通過。
+
+* 93 意圖營利而有下列情形之一者，處二年以下有期徒刑、拘役，或併科新臺幣五十萬元以下罰金：一、違反第七十條規定者。二、以第八十七條第二款、第三款、第五款或第六款之方法侵害他人之著作財產權者。非意圖營利而犯前項之罪，其重製物超過五份，或權利人所受損害超過新臺幣三萬元者，處一年以下有期徒刑、拘役，或科或併科新臺幣二十五萬元以下罰金。
+
+> 釋：照黨團協商條文通過。
+
+* 94 以犯第九十一條第一項、第二項、第九十一條之一、第九十二條或第九十三條之罪為常業者，處一年以上七年以下有期徒刑，得併科新臺幣三十萬元以上三百萬元以下罰金。以犯第九十一條第三項之罪為常業者，處一年以上七年以下有期徒刑，得併科新臺幣八十萬元以上八百萬元以下罰金。
+
+> 釋：一、配合修正條文第九十一條之一侵害散布權之處罰，於第一項增定為本條常業犯加重處罰之類型之一，並調整罰金刑數額，以有效遏阻侵害。二、意圖銷售或出租，以重製於光碟之方法，犯侵害重製權罪之常業犯，因此類犯罪行為涉有非法暴利，已有朝向大規模之組織犯罪型態發展之趨勢，非但使合法產業失去存空間，更嚴重破壞市場經濟秩序，侵損國家產業競爭力與敗壞國民道德風氣，造成國家社會整體的損害，宜加重處罰，提高罰金刑之數額，以期有效遏止侵害，爰增訂第二項。
+
+* 95 違反第一百十二條規定者，處一年以下有期徒刑、拘役或科或併科新臺幣二萬元以上二十五萬元以下罰金。
+
+> 釋：一、原條文第一款刪除。按違反原條文第十八條而侵害著作人格權之行為，因其著作人業已死亡，對其著作人格權之保護無須與著作人仍生存之保護等量齊觀，以民事救濟應即足夠，而無須科以刑事處罰，爰刪除之。二、原條文第二款及第三款刪除。製版權之保護，以民事救濟應已足夠，不以刑事處罰為必要，爰刪除之。三、原條文第四款修正列為本條規定。提高罰金刑之數額，並增訂得處以拘役，使司法機關對於具體個案之量刑更具靈活性。
 
 * 96 違反第五十九條第二項或第六十四條規定者，科新臺幣五萬元以下罰金。
 
+* 96.1 違反第八十條之一者，處一年以下有期徒刑、拘役或科或併科新臺幣二萬元以上二十五萬元以下罰金。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
+
+* 96.2 依本章科罰金時，應審酌犯人之資力及犯罪所得之利益。如所得之利益超過罰金最多額時，得於所得利益之範圍內酌量加重。
+
+> 釋：一、本條新增。二、按侵害著作權以獲得經濟利得為主要目的，為有效遏止侵害行為，應以經濟手段打擊經濟犯罪，爰規定其犯罪所得利益超過本章罰金刑之最多額時，法院得於所得利益之範圍內酌量加重。
+
 * 97 （刪除）
 
-* 98 （刪除）
+* 98 犯第九十一條至第九十六條之一之罪，供犯罪所用或因犯罪所得之物，得沒收之。但犯第九十一條第三項及第九十一條之一第三項之罪者，其得沒收之物不以屬於犯人者為限。
+
+> 釋：一、本條為八十一年本法明訂之條文，八十七年修法時，各界以刑法總則已有相同條文之規定，咸認本法無重複規定之必要，而予刪除。鑒於恢復本條文，有宣示性之效果，有助於查緝著作權侵害犯罪，爰予回復增訂。二、又犯第九十一條第三項及第九十一條之一第三項之罪者，對著作權侵害尤大，爰參考光碟管理條例第十五條第三項及第十七條第三項規定，於但書特別規定，其供犯罪所用或因犯罪所得之物，不問屬於犯人與否，均得沒收之。
+
+* 98.1 犯第九十一條第三項或第九十一條之一第三項之罪，其行為人逃逸而無從確認者，供犯罪所用或因犯罪所得之物，司法警察機關得逕為沒入。前項沒入之物，除沒入款項繳交國庫外，銷燬之。其銷燬或沒入款項之處理程序，準用社會秩序維護法相關規定辦理。
+
+> 釋：一、本條新增。二、按實務上常見司法警察機關於取締著作權侵害犯罪行為時，行為人逃逸而無從確認，致所查獲供犯罪所用或因犯罪所得之物，無從隨同犯罪案件移送，僅得以無主物處理，經公告一段期間無人認領後始歸入國庫，其程序曠日費時，徒增社會成本，爰參考社會秩序維護法第二十三條、第四十三條及警械使用條例第十四條第一項規定，得由司法警察機關逕為沒入。三、又因犯罪所得之物經沒入後，如為金錢，應予繳交國庫，如為金錢以外之物（例如盜版光碟），為避免再流入市場，造成著作權人損害，應予銷燬，爰配合明定第二項。
 
 * 99 犯第九十一條至第九十五條之罪者，因被害人或其他有告訴權人之聲請，得令將判決書全部或一部登報，其費用由被告負擔。
 
-* 100 本章之罪，須告訴乃論。但第九十四條及第九十五條第一款之罪，不在此限。
+* 100 本章之罪，須告訴乃論。但犯第九十一條第三項、第九十一條之一第三項及第九十四條之罪，不在此限。
 
-* 101 法人之代表人、法人或自然人之代理人、受雇人或其他從業人員，因執行業務，犯第九十一條至第九十六條之罪者，除依各該條規定處罰其行為人外，對該法人或自然人亦科各該條之罰金。對前項行為人、法人或自然人之一方告訴或撤回告訴者，其效力及於他方。
+> 釋：一、由於科技之進步，盜版品之製造已從單一或少量演進成為在極短的時間裡即可製造數以千萬計之產品。盜錄、盜拷及散布盜版光碟之犯罪行為，成本低微，攫取非法暴利，破壞產銷秩序及經濟秩序，擾亂交易安全，更危及著作權相關產業。二、此類犯罪行為已從往昔單純侵害個人法益之性質轉化為損害國家、社會法益的性質，不宜繼續列為告訴乃論之範圍，而應由國家主動追訴。三、爰將犯修正條文第九十一條第三項及第九十一條之一第三項所定兩種較重大之著作權侵害行為納入非告訴乃論之範圍，以期有效遏止侵權犯罪。四、按修正條文第九十五條業已刪除第一款之規定，爰配合修正。
 
-* 102 未經認許之外國法人，對於第九十一條至第九十六條之罪，得為告訴或提起自訴。
+* 101 法人之代表人、法人或自然人之代理人、受雇人或其他從業人員，因執行業務，犯第九十一條至第九十六條之一之罪者，除依各該條規定處罰其行為人外，對該法人或自然人亦科各該條之罰金。對前項行為人、法人或自然人之一方告訴或撤回告訴者，其效力及於他方。
+
+> 釋：第一項修正。配合修正條文第九十六條之一對於違反科技保護措施及著作權利管理電子資訊保護之處罰，於本條增列為兩罰及告訴不可分適用對象。
+
+* 102 未經認許之外國法人，對於第九十一條至第九十六條之一之罪，得為告訴或提起自訴。
+
+> 釋：配合修正條文第九十六條之一對於違反科技保護措施及著作權利管理電子資訊保護之處罰，將之納入本條未經認許之外國法人得為告訴或提起自訴之範圍，爰予修正。
 
 * 103 司法警察官或司法警察對侵害他人之著作權或製版權，經告訴、告發者，得依法扣押其侵害物，並移送偵辦。
 
 * 104 （刪除）
 
-* 105 依本法申請強制授權、製版權登記、調解、查閱製版權之登記或請求發給謄本者，應繳納規費。前項收費標準，由主管機關定之。
+* 105 依本法申請強制授權、製版權登記、製版權讓與登記、製版權信託登記、調解、查閱製版權登記或請求發給謄本者，應繳納規費。前項收費基準，由主管機關定之。
 
-* 106 著作完成於中華民國八十一年六月十日本法修正施行前，且合於修正施行前本法第一百零六條至第一百零九條規定之一者，除本章另有規定外，適用本法。著作完成於中華民國八十一年六月十日本法修正施行後者，適用本法。
+> 釋：一、第一項修正。配合修正條文第七十九條第四項規定，爰予增列製版權信託登記，及讓與登記，均應繳納規費。二、第二項修正，將「標準」修正為「基準」。
+
+* 106 著作完成於中華民國八十一年六月十日本法修正施行前，且合於中華民國八十七年一月二十一日修正施行前本法第一百零六條至第一百零九條規定之一者，除本章另有規定外，適用本法。著作完成於中華民國八十一年六月十日本法修正施行後者，適用本法。
+
+> 釋：第一項酌作文字修正。按著作完成於中華民國八十一年六月十日本法修正施行前者，須合於中華民國八十七年一月二十一日修正施行前本法第一百零六條至第一百零九條規定之一者，始得適用本法，爰予修正。
 
 * 106.1 著作完成於世界貿易組織協定在中華民國管轄區域內生效日之前，未依歷次本法規定取得著作權而依本法所定著作財產權期間計算仍在存續中者，除本章另有規定外，適用本法。但外國人著作在其源流國保護期間已屆滿者，不適用之。前項但書所稱源流國依西元一九七一年保護文學與藝術著作之伯恩公約第五條規定決定之。
 
-* 106.2 依前條規定受保護之著作，其利用人於世界貿易組織協定在中華民國管轄區域內生效日之前，已著手利用該著作或為利用該著作已進行重大投資者，除本章另有規定外，自該生效日起二年內，得繼續利用，不適用第六章及第七章規定。
+* 106.2 依前條規定受保護之著作，其利用人於世界貿易組織協定在中華民國管轄區域內生效日之前，已著手利用該著作或為利用該著作已進行重大投資者，除本章另有規定外，自該生效日起二年內，得繼續利用，不適用第六章及第七章規定。自中華民國九十二年六月六日本法修正施行起，利用人依前項規定利用著作者，除出租或出借之情形外，應對被利用著作之著作財產權人支付該著作一般經自由磋商所應支付合理之使用報酬。依前條規定受保護之著作，利用人未經授權所完成之重製物，自本法修正公布一年後，不得再行銷售。但仍得出租或出借。利用依前條規定受保護之著作另行創作之著作重製物，不適用前項規定，但除合於第四十四條至第六十五條規定外，應對被利用著作之著作財產權人支付該著作一般經自由磋商所應支付合理之使用報酬。
 
-* 106.3 於世界貿易組織協定在中華民國管轄區域內生效日之前，就第一百零六條之一著作改作完成之衍生著作，且受歷次本法保護者，於該生效日以後，得繼續利用，不適用第六章及第七章規定。前項情形，於該生效日起滿二年後，利用人應對原著作著作財產權人支付符合該著作一般經自由磋商所應支付之使用報酬。前二項規定，對衍生著作之保護，不生影響。
+> 釋：照黨團協商條文通過。
+
+* 106.3 於世界貿易組織協定在中華民國管轄區域內生效日之前，就第一百零六條之一著作改作完成之衍生著作，且受歷次本法保護者，於該生效日以後，得繼續利用，不適用第六章及第七章規定。自中華民國九十二年六月六日本法修正施行起，利用人依前項規定利用著作者，應對原著作之著作財產權人支付該著作一般經自由磋商所應支付合理之使用報酬。前二項規定，對衍生著作之保護，不生影響。
+
+> 釋：第二項酌作修正。按依TRIPS第七十條第四項規定，回溯保護過渡時期之適用，應使權利人得獲得合理之補償金，爰修正第二項規定自本法修正施行後，依現行條文第一項規定利用著作者，應支付一般經自由磋商所應支付合理之使用報酬，以期符合TRIPS之規定。又應支付使用報酬而未支付者，僅為債權債務關係，尚不至於發生著作權侵權民、刑事責任問題。
 
 * 107 （刪除）
 
@@ -264,21 +380,31 @@
 
 * 110 第十三條規定，於中華民國八十一年六月十日本法修正施行前已完成註冊之著作，不適用之。
 
-* 111 有下列情形之一者，第十一條及第十二條之規定，不適用之：一、依中華民國八十一年六月十日修正施行前本法第十條及第十一條規定取得著作權者。二、依修正施行前本法第十一條及第十二條規定取得著作權者。
+* 111 有下列情形之一者，第十一條及第十二條規定，不適用之：一、依中華民國八十一年六月十日修正施行前本法第十條及第十一條規定取得著作權者。二、依中華民國八十七年一月二十一日修正施行前本法第十一條及第十二條規定取得著作權者。
+
+> 釋：第二款酌作文字修正。按中華民國八十七年一月二十一日修正施行之本法第十一條及第十二條將雇用關係完成之著作及出資聘人完成著作之著作權歸屬加以修正，為免變動既有權利義務關係，維持法律秩序之安定，爰明定其不適用中華民國八十七年一月二十一日修正施行前取得著作權之情形。
 
 * 112 中華民國八十一年六月十日本法修正施行前，翻譯受中華民國八十一年六月十日修正施行前本法保護之外國人著作，如未經其著作權人同意者，於中華民國八十一年六月十日本法修正施行後，除合於第四十四條至第六十五條規定者外，不得再重製。前項翻譯之重製物，於中華民國八十一年六月十日本法修正施行滿二年後，不得再行銷售。
 
-* 113 本法修正施行前取得之製版權，適用本法規定。
+* 113 自中華民國九十二年六月六日本法修正施行前取得之製版權，依本法所定權利期間計算仍在存續中者，適用本法規定。
+
+> 釋：本條就依本法修正施行前取得之製版權過渡規定加以修正，使之更為明確。
 
 * 114 （刪除）
 
 * 115 本國與外國之團體或機構互訂保護著作權之協議，經行政院核准者，視為第四條所稱協定。
 
-* 115.1 本法修正施行前著作權或製版權註冊簿或登記簿，主管機關得提供民眾閱覽。
+* 115.1 製版權登記簿、註冊簿或製版物樣本，應提供民眾閱覽抄錄。中華民國八十七年一月二十一日本法修正施行前之著作權註冊簿、登記簿或著作樣本，得提供民眾閱覽抄錄。
 
-* 115.2 法院為處理著作權訴訟案件，得設立專業法庭或指定專人辦理。著作權訴訟案件法院應以判決書正本乙份送主管機關。
+> 釋：一、依修正條文第七十九條第一項規定製版權之取得須經登記，同條第四項復規定「以製版權為信託者，非經登記，不得對抗第三人」，是製版權註冊簿及登記簿，自應提供民眾閱覽或抄錄，爰增訂第一項，以符法制。二、八十七年一月二十一日修正施行之本法已將著作權登記制度廢除，舊有之著作權註冊簿或登記簿，是否提供民眾閱覽或抄錄，著作權專責機關本可視實際狀況決定，且製版物樣本、著作樣本實務上亦有閱覽或抄錄之需求，爰保留原條文，酌作文字修正後移列第二項。
+
+* 115.2 法院為處理著作權訴訟案件，得設立專業法庭或指定專人辦理。著作權訴訟案件，法院應以判決書正本一份送著作權專責機關。
+
+> 釋：第二項酌作文字修正。
 
 * 116 （刪除）
 
-* 117 本法自公布日施行。但第一百零六條之一至第一百零六條之三規定，自世界貿易組織協定在中華民國管轄區域內生效日起施行。
+* 117 本法除中華民國八十七年一月二十一日修正公布之第一百零六條之一至第一百零六條之三規定，自世界貿易組織協定在中華民國管轄區域內生效日起施行外，自公布日施行。
+
+> 釋：為配合本次修正條文擬「自公布日施行」，爰修正本條。
 
